--- a/data/cards/23213239.yaml
+++ b/data/cards/23213239.yaml
@@ -8,7 +8,7 @@ name:
   it: Pericolo! Perturbazione! Disordine!
   pt: Perigo! Perturbação! Desordem!
   ja: <ruby>激<rt>げき</rt></ruby><ruby>動<rt>どう</rt></ruby>の<ruby>未<rt>み</rt></ruby><ruby>界<rt>かい</rt></ruby><ruby>域<rt>いき</rt></ruby>
-  ja_romaji: Gekidō no Mikai'iki
+  ja_romaji: Gekidō no Mikaiiki
   ko: 격동의 미계역
   ko_rr: Geokdong-ui Migyeyeok
   zh-TW:
