--- a/data/cards/42166000.yaml
+++ b/data/cards/42166000.yaml
@@ -34,7 +34,7 @@ text:
     Primeiro deve ser Invocado por Invocação-Fusão, ou Invocado por Invocação-Especial do seu Deck Adicional ao oferecer como Tributo 1 monstro Aqua de Nível 10 com 0 de ATK. Este card pode ser considerado como 1 ou 3 Tributos para a Invocação-Tributo de um monstro. Não pode ser destruído em batalha. Os monstros do seu oponente não podem escolher como alvo de ataques, e seu oponente não pode escolher como alvo de efeitos de card, quaisquer monstros que você controla, exceto "Deus Egípcio Limo".
   ja: |-
     水族モンスター＋水属性・レベル１０モンスター
-    このカードは融合召喚及び以下の方法でのみＥＸデッキから特殊召喚できる。●自分フィールドの攻撃力０の水族・レベル１０モンスター１体をリリースした場合にＥＸデッキから特殊召喚できる。①：モンスターをアドバンス召喚する場合、このカードは３体分のリリースにできる。②：このカードは戦闘では破壊されず、相手は「神・スライム」以外の自分フィールドのモンスターを、攻撃対象に選択できず、効果の対象にもできない。
+    このカードは融合召喚及び以下の方法でのみＥＸデッキから特殊召喚できる。●自分フィールドの攻撃力０の水族・レベル１０モンスター１体をリリースした場合にＥＸデッキから特殊召喚できる。①：モンスター３体のリリースを必要とするモンスターをアドバンス召喚する場合、このカードは３体分のリリースにできる。②：このカードは戦闘では破壊されず、相手は「神・スライム」以外の自分フィールドのモンスターを、攻撃対象に選択できず、効果の対象にもできない。
   ko: |-
     물족 몬스터 ＋ 물 속성 / 레벨 10 몬스터
     이 카드는 융합 소환 및 이하의 방법으로만 엑스트라 덱에서 특수 소환할 수 있다. ●자신 필드의 공격력 0 인 물족 / 레벨 10 몬스터 1장을 릴리스했을 경우에 엑스트라 덱에서 특수 소환할 수 있다. ①: 몬스터를 어드밴스 소환할 경우, 이 카드는 3장만큼의 릴리스로 할 수 있다. ②: 이 카드는 전투로는 파괴되지 않으며, 상대는 "갓 슬라임" 이외의 자신 필드의 몬스터를, 공격 대상으로 선택할 수 없고, 효과의 대상으로도 할 수 없다.
