--- a/data/cards/54757758.yaml
+++ b/data/cards/54757758.yaml
@@ -40,7 +40,7 @@ text:
     ①: 이 카드가 몬스터 존에 존재하는 한, 상대는 이 카드 및 이 카드와 같은 속성을 가지는 필드의 몬스터를 효과의 대상으로 할 수 없다. ②: 1턴에 1번, 속성을 1개 선언하고 발동할 수 있다. 이 카드는 턴 종료시까지 선언한 속성이 된다. 이 효과는 상대 턴에도 발동할 수 있다.
   zh-TW:
   zh-CN: |-
-    同属性且种族不同的怪兽×2
+    同属性而种族不同的怪兽×2
     ①：只要此卡存在于怪兽区域，对手不可将此卡及场上拥有与此卡同属性的怪兽作为效果的对象。②：1回合1次，宣言1个属性可以发动。此卡直至回合结束时为止变为宣言的属性。此效果在对手回合中也可以发动。
 card_type: Monster
 monster_type_line: Wyrm / Fusion / Effect
