--- a/data/cards/80532587.yaml
+++ b/data/cards/80532587.yaml
@@ -41,7 +41,7 @@ text:
   zh-TW:
   zh-CN: |-
     同步怪兽＋超量怪兽
-    仅在将自己场上的上述卡送至墓地的情况下可以特殊召唤。自己1回合仅可特殊召唤1次"旧神努茨"。①：1回合1次，在自己的主要阶段可以发动。从手牌将1只等级4怪兽特殊召唤。②：此卡被送至墓地的情况下，以场上的1张卡为对象可以发动。将该卡破坏。
+    仅在将自己场上的上述卡送至墓地的情况下可以特殊召唤。自己1回合仅可特殊召唤1次“旧神努茨”。①：1回合1次，在自己的主要阶段可以发动。从手牌将1只等级4怪兽特殊召唤。②：此卡被送至墓地的情况下，以场上的1张卡为对象可以发动。将该卡破坏。
 card_type: Monster
 monster_type_line: Fairy / Fusion / Effect
 attribute: LIGHT
