--- a/data/cards/83518674.yaml
+++ b/data/cards/83518674.yaml
@@ -8,7 +8,7 @@ name:
   it: Pericolo! Ogopogo!
   pt: Perigo! Ogopogo!
   ja: <ruby>未<rt>み</rt></ruby><ruby>界<rt>かい</rt></ruby><ruby>域<rt>いき</rt></ruby>のオゴポゴ
-  ja_romaji: Mikai'iki no Ogopogo
+  ja_romaji: Mikaiiki no Ogopogo
   ko: 미계역의 오고포고
   ko_rr: Migyeyeok-ui Ogopogo
   zh-TW:
