--- a/data/cards/90807199.yaml
+++ b/data/cards/90807199.yaml
@@ -8,7 +8,7 @@ name:
   it: Pericolo! Uccello di Tuono!
   pt: Perigo! Pássaro-trovão!
   ja: <ruby>未<rt>み</rt></ruby><ruby>界<rt>かい</rt></ruby><ruby>域<rt>いき</rt></ruby>のサンダーバード
-  ja_romaji: Mikai'iki no Sandābādo
+  ja_romaji: Mikaiiki no Sandābādo
   ko: 미계역의 썬더버드
   ko_rr: Migyeyeok-ui Sseondeobeodeu
   zh-TW:
