--- a/data/cards/99745551.yaml
+++ b/data/cards/99745551.yaml
@@ -8,7 +8,7 @@ name:
   it: Pericolo!? Tsuchinoko?
   pt: Perigo!? Tsuchinoko?
   ja: <ruby>未<rt>み</rt></ruby><ruby>界<rt>かい</rt></ruby><ruby>域<rt>いき</rt></ruby>のツチノコ
-  ja_romaji: Mikai'iki no Tsuchinoko
+  ja_romaji: Mikaiiki no Tsuchinoko
   ko: 미계역의 츠치노코
   ko_rr: Migyeyeok-ui Cheuchinoko
   zh-TW:
