--- a/data/cards/kdb11927.yaml
+++ b/data/cards/kdb11927.yaml
@@ -9,10 +9,10 @@ name:
   pt: O Dragão Alado de Rá - Modo Esfera
   ja: ラーの<ruby>翼<rt>よく</rt></ruby><ruby>神<rt>しん</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>－<ruby>球体形<rt>スフィア・モード</rt></ruby>
   ja_romaji: Rā no Yokushinryū - Sufia Mōdo
-  ko: 라의 익신룡-구체형
+  ko: 라의 익신룡－구체형
   ko_rr: Ra-ui Iksinnyong - Guchehyeong
   zh-TW:
-  zh-CN: 拉之翼神龙－球体形
+  zh-CN: 拉之翼神龙-球体形
 text:
   en: |-
     Cannot be Special Summoned. Requires 3 Tributes from either side of the field to Normal Summon to that side of the field (cannot be Normal Set), then shift control to this card's owner during the End Phase of the next turn. Cannot attack. Your opponent cannot target this card for attacks or by card effects. You can Tribute this card; Special Summon 1 "The Winged Dragon of Ra" from your hand or Deck, ignoring its Summoning conditions, and if you do, its ATK/DEF become 4000.
@@ -27,12 +27,12 @@ text:
   pt: |-
     Não pode ser Invocado por Invocação-Especial. Requer 3 Tributos de qualquer lado do campo para ser Invocado por Invocação-Normal do lado do campo em questão (não pode ser Baixado Normalmente) e, depois, mude o controle para o dono deste card durante a Fase Final do próximo turno. Não pode atacar. Seu oponente não pode escolher este card como alvo de ataques ou efeitos de card. Você pode oferecer este card como Tributo; Invoque por Invocação-Especial 1 "O Dragão Alado de Rá" da sua mão ou do Deck, ignorando suas condições de Invocação e, se isso acontecer, o ATK/DEF dele se tornam 4000.
   ja: |-
-    このカードは<ruby>特<rt>とく</rt></ruby><ruby>殊<rt>しゅ</rt></ruby><ruby>召<rt>しょう</rt></ruby><ruby>喚<rt>かん</rt></ruby>できない。このカードを<ruby>通<rt>つう</rt></ruby><ruby>常<rt>じょう</rt></ruby><ruby>召<rt>しょう</rt></ruby><ruby>喚<rt>かん</rt></ruby>する<ruby>場<rt>ば</rt></ruby><ruby>合<rt>あい</rt></ruby>、<ruby>自<rt>じ</rt></ruby><ruby>分<rt>ぶん</rt></ruby>フィールドのモンスター３<ruby>体<rt>たい</rt></ruby>をリリースして<ruby>自<rt>じ</rt></ruby><ruby>分<rt>ぶん</rt></ruby>フィールドに<ruby>召<rt>しょう</rt></ruby><ruby>喚<rt>かん</rt></ruby>、または<ruby>相<rt>あい</rt></ruby><ruby>手<rt>て</rt></ruby>フィールドのモンスター３<ruby>体<rt>たい</rt></ruby>をリリースして<ruby>相<rt>あい</rt></ruby><ruby>手<rt>て</rt></ruby>フィールドに<ruby>召<rt>しょう</rt></ruby><ruby>喚<rt>かん</rt></ruby>しなければならず、<ruby>召<rt>しょう</rt></ruby><ruby>喚<rt>かん</rt></ruby>したこのカードのコントロールは<ruby>次<rt>つぎ</rt></ruby>のターンのエンドフェイズに<ruby>元<rt>もと</rt></ruby><ruby>々<rt>もと</rt></ruby>の<ruby>持<rt>も</rt></ruby>ち<ruby>主<rt>ぬし</rt></ruby>に<ruby>戻<rt>もど</rt></ruby>る。①：このカードは<ruby>攻<rt>こう</rt></ruby><ruby>撃<rt>げき</rt></ruby>できず、<ruby>相<rt>あい</rt></ruby><ruby>手<rt>て</rt></ruby>の<ruby>攻<rt>こう</rt></ruby><ruby>撃<rt>げき</rt></ruby>・<ruby>効<rt>こう</rt></ruby><ruby>果<rt>か</rt></ruby>の<ruby>対<rt>たい</rt></ruby><ruby>象<rt>しょう</rt></ruby>にならない。②：このカードをリリースして<ruby>発<rt>はつ</rt></ruby><ruby>動<rt>どう</rt></ruby>できる。<ruby>手<rt>て</rt></ruby><ruby>札<rt>ふだ</rt></ruby>・デッキから「ラーの<ruby>翼<rt>よく</rt></ruby><ruby>神<rt>しん</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>」１<ruby>体<rt>たい</rt></ruby>を、<ruby>召<rt>しょう</rt></ruby><ruby>喚<rt>かん</rt></ruby><ruby>条<rt>じょう</rt></ruby><ruby>件<rt>けん</rt></ruby>を<ruby>無<rt>む</rt></ruby><ruby>視<rt>し</rt></ruby>し、<ruby>攻<rt>こう</rt></ruby><ruby>撃<rt>げき</rt></ruby><ruby>力<rt>りょく</rt></ruby>・<ruby>守<rt>しゅ</rt></ruby><ruby>備<rt>び</rt></ruby><ruby>力<rt>りょく</rt></ruby>を４０００にして<ruby>特<rt>とく</rt></ruby><ruby>殊<rt>しゅ</rt></ruby><ruby>召<rt>しょう</rt></ruby><ruby>喚<rt>かん</rt></ruby>する。
+    このカードは特殊召喚できない。このカードを通常召喚する場合、自分フィールドのモンスター３体をリリースして自分フィールドに召喚、または相手フィールドのモンスター３体をリリースして相手フィールドに召喚しなければならず、召喚したこのカードのコントロールは次のターンのエンドフェイズに元々の持ち主に戻る。①：このカードは攻撃できず、相手の攻撃・効果の対象にならない。②：このカードをリリースして発動できる。手札・デッキから「ラーの翼神竜」１体を、召喚条件を無視し、攻撃力・守備力を４０００にして特殊召喚する。
   ko: |-
-    이 카드는 특수 소환할 수 없다. 이 카드를 통상 소환할 경우, 자신 필드의 몬스터 3장을 릴리스하고 자신 필드에 일반 소환, 또는 상대 필드의 몬스터 3장을 릴리스하고 상대 필드에 일반 소환하지 않으면 안되며, 일반 소환한 이 카드의 컨트롤은 다음 턴의 엔드 페이즈에 원래의 주인에게 되돌아간다. ①: 이 카드는 공격할 수 없으며, 상대의 공격 / 효과의 대상이 되지 않는다. ②: 이 카드를 릴리스하고 발동할 수 있다. 패 / 덱에서 "라의 익신룡" 1장을, 소환 조건을 무시하고]], 공격력 / 수비력을 4000 으로 하여 특수 소환한다.
+    이 카드는 특수 소환할 수 없다. 이 카드를 통상 소환할 경우, 자신 필드의 몬스터 3장을 릴리스하고 자신 필드에 일반 소환, 또는 상대 필드의 몬스터 3장을 릴리스하고 상대 필드에 일반 소환해야 하며, 일반 소환한 이 카드의 컨트롤은 다음 턴의 엔드 페이즈에 원래의 주인에게 되돌아간다. ①: 이 카드는 공격할 수 없으며, 상대의 공격 / 효과의 대상이 되지 않는다. ②: 이 카드를 릴리스하고 발동할 수 있다. 패 / 덱에서 "라의 익신룡" 1장을, 소환 조건을 무시하고, 공격력 / 수비력을 4000 으로 하여 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    此卡不可特殊召唤。通常召唤此卡的情况下，必须解放自己场上的3只怪兽并召唤至自己场上，或解放对手场上的3只怪兽并召唤至对手场上，召唤的此卡其控制权将在下一个回合的结束阶段还给原本的持有者。①：此卡不可攻击，不会成为对手的攻击・效果的对象。②：解放此卡可以发动。从手牌・牌组将1只"拉之翼神龙"无视召唤条件，将其攻击力・守备力改成4000并特殊召唤。
+    此卡不可特殊召唤。通常召唤此卡的情况下，必须解放自己场上的3只怪兽并召唤至自己场上，或解放对手场上的3只怪兽并召唤至对手场上，召唤的此卡其控制权将在下一个回合的结束阶段还给原本的持有者。①：此卡不可攻击，不会成为对手的攻击・效果的对象。②：解放此卡可以发动。从手牌・牌组将1只“拉之翼神龙”无视召唤条件，将其攻击力・守备力改成4000并特殊召唤。
 card_type: Monster
 monster_type_line: Divine-Beast / Effect
 attribute: DIVINE
