--- a/data/cards/kdb5000.yaml
+++ b/data/cards/kdb5000.yaml
@@ -261,6 +261,10 @@ sets:
     set_name: Prismatic Art Collection
     rarities:
     - Prismatic Secret Rare
+  - set_number: 25DS-JP001
+    set_name: Quarter Century Duel Set "The Winged Dragon of Ra"
+    rarities:
+    - Quarter Century Secret Rare
   ko:
   - set_number: MOV-KR007
     set_name: Movie Pack Vol.2
