--- a/data/series/list.yaml
+++ b/data/series/list.yaml
@@ -4577,7 +4577,7 @@
   it: Pericolo!
   pt: Perigo!
   ja: <ruby>未<rt>み</rt></ruby><ruby>界<rt>かい</rt></ruby><ruby>域<rt>いき</rt></ruby>
-  ja_romaji: Mikai'iki
+  ja_romaji: Mikaiiki
   ko: 미계역
   ko_rr: Migyeyeok
   zh-TW:
