--- a/data/cards/15083304.yaml
+++ b/data/cards/15083304.yaml
@@ -8,7 +8,7 @@ name:
   it: Zona del Pericolo!
   pt: Zona de Perigo!
   ja: <ruby>未<rt>み</rt></ruby><ruby>界<rt>かい</rt></ruby><ruby>域<rt>いき</rt></ruby>の<ruby>危<rt>き</rt></ruby><ruby>険<rt>けん</rt></ruby><ruby>地<rt>ち</rt></ruby><ruby>帯<rt>たい</rt></ruby>
-  ja_romaji: Mikai'iki no Kiken Chitai
+  ja_romaji: Mikaiiki no Kikenchitai
   ko: 미계역의 위험지대
   ko_rr: Migyeyeok-ui Wiheomjidae
   zh-TW:
