--- a/data/cards/25140659.yaml
+++ b/data/cards/25140659.yaml
@@ -8,7 +8,7 @@ name:
   it: Squadra di Risposta Pericolo!
   pt: Perigo! Equipe de Resposta
   ja: <ruby>未<rt>み</rt></ruby><ruby>界<rt>かい</rt></ruby><ruby>域<rt>いき</rt></ruby><ruby>調<rt>ちょう</rt></ruby><ruby>査<rt>さ</rt></ruby><ruby>報<rt>ほう</rt></ruby><ruby>告<rt>こく</rt></ruby>
-  ja_romaji: Mikai'iki Chōsa Hōkoku
+  ja_romaji: Mikaiiki Chōsa Hōkoku
   ko: 미계역조사보고
   ko_rr: Migyeyeokjosabogo
   zh-TW:
