--- a/data/cards/25862681.yaml
+++ b/data/cards/25862681.yaml
@@ -36,8 +36,8 @@ text:
     チューナー＋チューナー以外のモンスター１体以上
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分メインフェイズに発動できる。手札からレベル４以下のモンスター１体を特殊召喚する。この効果を発動するターン、自分はバトルフェイズを行えない。②：自分メインフェイズに発動できる。フィールドゾーンのカードを全て破壊し、自分は１０００ＬＰ回復する。その後、破壊したカードとはカード名が異なるフィールド魔法カード１枚をデッキから手札に加える事ができる。
   ko: |-
-    튜너 + 튜너 이외의 몬스터 1장 이상
-    1턴에 1번, 패에서 레벨 4 이하의 몬스터 1장을 특수 소환할 수 있다. 이 효과를 발동하는 턴에, 자신은 배틀 페이즈를 실행할 수 없다. 또한, 1턴에 1번, 필드 마법 카드를 파괴할 수 있다. 파괴했을 경우 자신은 1000 라이프 포인트 회복한다. 또한, 자신의 덱에서 필드 마법 카드 1장을 패에 넣을 수 있다.
+    튜너 ＋ 튜너 이외의 몬스터 1장 이상
+    1턴에 1번, 패에서 레벨 4 이하의 몬스터 1장을 특수 소환할 수 있다. 이 효과를 발동하는 턴에, 자신은 배틀 페이즈를 실행할 수 없다. 또한, 1턴에 1번, 필드 마법 카드를 파괴할 수 있다. 파괴했을 경우 자신은 1000 라이프 포인트를 회복한다. 또한, 자신의 덱에서 필드 마법 카드 1장을 패에 넣을 수 있다.
   zh-TW:
   zh-CN: |-
     调整＋调整以外的怪兽1只以上
