--- a/data/cards/26302107.yaml
+++ b/data/cards/26302107.yaml
@@ -8,7 +8,7 @@ name:
   it: Pericolo! Uomo Cane!
   pt: Perigo! Homem-Cão!
   ja: <ruby>未<rt>み</rt></ruby><ruby>界<rt>かい</rt></ruby><ruby>域<rt>いき</rt></ruby>のワーウルフ
-  ja_romaji: Mikai'iki no Wāurufu
+  ja_romaji: Mikaiiki no Wāurufu
   ko: 미계역의 워울프
   ko_rr: Migyeyeok-ui Woulpeu
   zh-TW:
