--- a/data/cards/43694650.yaml
+++ b/data/cards/43694650.yaml
@@ -8,7 +8,7 @@ name:
   it: Pericolo!? Jackalope?
   pt: Perigo!? Lebrílope?
   ja: <ruby>未<rt>み</rt></ruby><ruby>界<rt>かい</rt></ruby><ruby>域<rt>いき</rt></ruby>のジャッカロープ
-  ja_romaji: Mikai'iki no Jakkarōpu
+  ja_romaji: Mikaiiki no Jakkarōpu
   ko: 미계역의 재카로프
   ko_rr: Migyeyeok-ui Jaekaropeu
   zh-TW:
