--- a/data/cards/52350806.yaml
+++ b/data/cards/52350806.yaml
@@ -8,7 +8,7 @@ name:
   it: Pericolo! Uomo Falena!
   pt: Perigo! Homem-Mariposa!
   ja: <ruby>未<rt>み</rt></ruby><ruby>界<rt>かい</rt></ruby><ruby>域<rt>いき</rt></ruby>のモスマン
-  ja_romaji: Mikai'iki no Mosuman
+  ja_romaji: Mikaiiki no Mosuman
   ko: 미계역의 모스맨
   ko_rr: Migyeyeok-ui Moseumaen
   zh-TW:
