--- a/data/cards/52534264.yaml
+++ b/data/cards/52534264.yaml
@@ -8,7 +8,7 @@ name:
   it: Seconda Spedizione nel Pericolo!
   pt: Segunda Expedição ao Perigo!
   ja: <ruby>第<rt>だい</rt></ruby><ruby>弐<rt>に</rt></ruby><ruby>次<rt>じ</rt></ruby><ruby>未<rt>み</rt></ruby><ruby>界<rt>かい</rt></ruby><ruby>域<rt>いき</rt></ruby><ruby>探<rt>たん</rt></ruby><ruby>険<rt>けん</rt></ruby><ruby>隊<rt>たい</rt></ruby>
-  ja_romaji: Dainiji Mikai'iki Tankentai
+  ja_romaji: Dainiji Mikaiiki Tankentai
   ko: 제2차미계역탐험대
   ko_rr: Jeduchamigyeyeoktamheomdae
   zh-TW:
