--- a/data/cards/57433966.yaml
+++ b/data/cards/57433966.yaml
@@ -8,7 +8,7 @@ name:
   it: Pericolo! Emozioni! Mistero!
   pt: Perigo! Excitação! Mistério!
   ja: <ruby>魅<rt>み</rt></ruby><ruby>惑<rt>わく</rt></ruby>の<ruby>未<rt>み</rt></ruby><ruby>界<rt>かい</rt></ruby><ruby>域<rt>いき</rt></ruby>
-  ja_romaji: Miwaku no Mikai'iki
+  ja_romaji: Miwaku no Mikaiiki
   ko: 매혹의 미계역
   ko_rr: Maehok-ui Migyeyeok
   zh-TW:
