--- a/data/cards/58481572.yaml
+++ b/data/cards/58481572.yaml
@@ -12,7 +12,7 @@ name:
   ko: 마스크드 히어로 다크로우
   ko_rr:
   zh-TW:
-  zh-CN: 假面－英雄 暗法
+  zh-CN: 假面-英雄 暗法
 text:
   en: |-
     Must be Special Summoned by "Mask Change". Any card sent to your opponent's GY is banished instead. Once per turn, if your opponent adds a card(s) from their Deck to their hand (except during the Draw Phase or the Damage Step): You can banish 1 random card from your opponent's hand.
@@ -29,10 +29,10 @@ text:
   ja: |-
     このカードは「マスク・チェンジ」の効果でのみ特殊召喚できる。①：このカードがモンスターゾーンに存在する限り、相手の墓地へ送られるカードは墓地へは行かず除外される。②：１ターンに１度、相手がドローフェイズ以外でデッキからカードを手札に加えた場合に発動できる。相手の手札をランダムに１枚選んで除外する。
   ko: |-
-    이 카드는 "마스크 체인지"의 효과로만 특수 소환할 수 있다. ①: 이 카드가 몬스터 존에 존재하는 한, 상대의 묘지로 보내진 카드는 묘지로는 가지 않으며 제외된다. ②: 1턴에 1번, 상대가 드로우 페이즈 이외에, 덱에서 카드를 패에 넣었을 경우에 발동할 수 있다. 상대의 패를 무작위로 1장 고르고 제외한다.
+    이 카드는 "마스크 체인지"의 효과로만 특수 소환할 수 있다. ①: 이 카드가 몬스터 존에 존재하는 한, 상대 묘지로 보내지는 카드는 묘지로는 가지 않으며 제외된다. ②: 1턴에 1번, 상대가 드로우 페이즈 이외에 덱에서 카드를 패에 넣었을 경우에 발동할 수 있다. 상대의 패를 무작위로 1장 고르고 제외한다.
   zh-TW:
   zh-CN: |-
-    此卡仅可以"假面变换"的效果特殊召唤。①：只要此卡存在于怪兽区域，被送往对手墓地的卡不去墓地而直接被除外。②：1回合1次，对手在抽牌阶段以外从牌组将卡加入手牌的情况下可以发动。随机挑选对手的1张手牌除外。
+    此卡仅可以“假面变换”的效果特殊召唤。①：只要此卡存在于怪兽区域，被送往对手墓地的卡不去墓地而直接被除外。②：1回合1次，对手在抽牌阶段以外从牌组将卡加入手牌的情况下可以发动。随机挑选对手的1张手牌除外。
 card_type: Monster
 monster_type_line: Warrior / Fusion / Effect
 attribute: DARK
