--- a/data/cards/62968263.yaml
+++ b/data/cards/62968263.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Se você controlar um monstro "Olhos das Galáxias": você pode Invocar este card por Invocação-Especial da sua mão em Posição de Defesa. Se este card for desassociado de um Monstro Xyz para ativar o efeito desse monstro: você pode pegar 1 "Dragão de Fóton de Olhos das Galáxias" da sua mão ou do Deck e Invocá-lo por Invocação-Especial ou associá-lo a um Monstro Xyz que você controla como matéria e, depois, se você ativou este efeito durante a Fase de Batalha, dobre o ATK de todos os Monstros Xyz "Número" que você controla. Você só pode usar cada efeito de "Dragão do Arrebol de Olhos das Galáxias" uma vez por turno.
   ja: |-
-    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドに「ギャラクシーアイズ」モンスターが存在する場合に発動できる。このカードを手札から守備表示で特殊召喚する。②：Ｘ素材のこのカードがＸモンスターの効果を発動するために取り除かれた場合に発動できる。手札・デッキから「銀河眼の光子竜」１体を選び、特殊召喚するか、自分フィールドのＸモンスターの下に重ねてＸ素材とする。この効果をバトルフェイズに発動した場合、さらに自分フィールドの全ての「Ｎｏ．」Ｘモンスターの攻撃力は倍になる。
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドに「ギャラクシーアイズ」モンスターが存在する場合に発動できる。このカードを手札から守備表示で特殊召喚する。②：Ｘ素材のこのカードがＸモンスターの効果を発動するために取り除かれた場合に発動できる。手札・デッキから「銀河眼の光子竜」１体を選び、特殊召喚するか、自分のＸモンスターの下に重ねてＸ素材とする。この効果をバトルフェイズに発動した場合、さらに自分フィールドの全ての「Ｎｏ．」Ｘモンスターの攻撃力は倍になる。
   ko: |-
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 "갤럭시아이즈" 몬스터가 존재할 경우에 발동할 수 있다. 이 카드를 패에서 수비 표시로 특수 소환한다. ②: 엑시즈 소재의 이 카드가 엑시즈 몬스터의 효과를 발동하기 위해 제거되었을 경우에 발동할 수 있다. 패 / 덱에서 "갤럭시아이즈 포톤 드래곤" 1장을 고르고, 특수 소환하거나, 자신 필드의 엑시즈 몬스터의 아래에 겹쳐 엑시즈 소재로 한다. 이 효과를 배틀 페이즈에 발동했을 경우, 추가로 자신 필드의 모든 "No." 엑시즈 몬스터의 공격력은 배가 된다.
   zh-TW:
