--- a/data/cards/64202399.yaml
+++ b/data/cards/64202399.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②③의 효과는 각각 1턴에 1번밖에 사용할 수 없으며, 자신 필드 또는 자신 묘지에 "푸른 눈의 백룡"이 존재할 경우에밖에 발동할 수 없다. ①: 이 카드가 특수 소환에 성공했을 경우에 발동할 수 있다. 덱에서 의식 마법 카드 또는 "융합" 1장을 패에 넣는다. ②: 자신 엔드 페이즈에 발동할 수 있다. 덱에서 레벨 8 이상의 드래곤족 몬스터 1장을 패에 넣는다. ③: 묘지의 이 카드를 제외하고 발동할 수 있다. 자신 필드의 모든 레벨 8 이상의 드래곤족 몬스터의 공격력은 1000 올린다.
   zh-TW:
   zh-CN: |-
-    此卡名的①②③效果1回合仅可各使用1次，仅可在自己场上或自己墓地有"青眼白龙"存在的情况下发动。①：此卡特殊召唤成功的情况下可以发动。从牌组将1张仪式魔法卡或"融合"加入手牌。②：在自己的结束阶段可以发动。从牌组将1只等级8以上的龙族怪兽加入手牌。③：将墓地的此卡除外可以发动。自己场上所有等级8以上的龙族怪兽的攻击力上升1000。
+    此卡名的①②③效果１回合仅可各使用１次，仅可在自己场上或自己墓地有“青眼白龙”存在的情况下发动。①：此卡特殊召唤成功的情况下可以发动。从牌组将１张仪式魔法卡或“融合”加入手牌。②：在自己的结束阶段可以发动。从牌组将１只等级８以上的龙族怪兽加入手牌。③：将墓地的此卡除外可以发动。自己场上所有等级８以上的龙族怪兽的攻击力上升１０００。
 card_type: Monster
 monster_type_line: Dragon / Effect
 attribute: LIGHT
