--- a/data/cards/69946549.yaml
+++ b/data/cards/69946549.yaml
@@ -34,14 +34,14 @@ text:
     Uma vez por turno (Efeito Rápido): você pode escolher 1 monstro com a face para cima que seu oponente controla; coloque 1 Marcador de Predador nele e se ele for de Nível 2 ou mais, ele se torna de Nível 1 enquanto tiver um Marcador de Predador. Negue os efeitos ativados dos monstros do seu oponente que tiverem Marcadores de Predador.
   ja: |-
     融合モンスター＋闇属性モンスター
-    ①：１ターンに１度、相手フィールドの表側表示モンスター１体を対象として発動できる。そのモンスターに捕食カウンターを１つ置く。捕食カウンターが置かれたレベル２以上のモンスターのレベルは１になる。この効果は相手ターンでも発動できる。②：このカードがモンスターゾーンに存在する限り、相手が発動した捕食カウンターが置かれているモンスターの効果は無効化される。
+    ①：１ターンに１度、相手フィールドの表側表示モンスター１体を対象として発動できる。そのモンスターに捕食カウンターを１つ置く。捕食カウンターが置かれたレベル２以上のモンスターのレベルは１になる。この効果は相手ターンでも発動できる。②：このカードがモンスターゾーンに存在する限り、相手が発動した、捕食カウンターが置かれているモンスターの効果は無効化される。
   ko: |-
     융합 몬스터 ＋ 어둠 속성 몬스터
     ①: 1턴에 1번, 상대 필드의 앞면 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터에 포식 카운터를 1개 놓는다. 포식 카운터가 놓여진 레벨 2 이상의 몬스터 레벨은 1 이 된다. 이 효과는 상대 턴에도 발동할 수 있다. ②: 이 카드가 몬스터 존에 존재하는 한, 상대가 발동한 포식 카운터가 놓여 있는 몬스터의 효과는 무효화된다.
   zh-TW:
   zh-CN: |-
     融合怪兽＋暗属性怪兽
-    ①：1回合1次，以对手场上的1只表侧表示怪兽为对象可以发动。在该怪兽上放1个捕食计数物。放有捕食计数物的等级2以上怪兽的等级变为1。此效果在对手回合中也可以发动。②：只要此卡存在于怪兽区域，对手发动的、放有捕食计数物的怪兽的效果无效化。
+    ①：１回合１次，以对手场上的１只表侧表示怪兽为对象可以发动。在该怪兽上放１个捕食计数物。放有捕食计数物的等级２以上怪兽的等级变为１。此效果在对手回合中也可以发动。②：只要此卡存在于怪兽区域，对手发动的、放有捕食计数物的怪兽的效果无效化。
 card_type: Monster
 monster_type_line: Plant / Fusion / Effect
 attribute: DARK
