--- a/data/cards/70711847.yaml
+++ b/data/cards/70711847.yaml
@@ -8,7 +8,7 @@ name:
   it: Pericolo! Nessie!
   pt: Perigo! Nessie!
   ja: <ruby>未<rt>み</rt></ruby><ruby>界<rt>かい</rt></ruby><ruby>域<rt>いき</rt></ruby>のネッシー
-  ja_romaji: Mikai'iki no Nesshī
+  ja_romaji: Mikaiiki no Nesshī
   ko: 미계역의 넷시
   ko_rr: Migyeyeok-ui Netsi
   zh-TW:
