--- a/data/cards/77235086.yaml
+++ b/data/cards/77235086.yaml
@@ -32,7 +32,7 @@ text:
     "기계천사의 의식"에 의해 의식 소환. ①: 이 카드가 전투로 몬스터를 파괴하고 묘지로 보냈을 경우에 발동한다. 그 몬스터의 원래 수비력만큼의 데미지를 상대에게 준다. ②: 이 카드가 릴리스되었을 경우에 발동할 수 있다. 덱에서 천사족 / 빛 속성 몬스터 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    以"机械天使的仪式"降临。①：此卡战斗破坏怪兽并将其送至墓地的情况下发动。给予对手相当于该怪兽原本守备力数值的伤害。②：此卡被解放的情况下可以发动。从牌组将1只天使族・光属性怪兽加入手牌。
+    以“机械天使的仪式”降临。①：此卡战斗破坏怪兽并将其送至墓地的情况下发动。给予对手相当于该怪兽原本守备力数值的伤害。②：此卡被解放的情况下可以发动。从牌组将１只天使族・光属性怪兽加入手牌。
 card_type: Monster
 monster_type_line: Fairy / Ritual / Effect
 attribute: LIGHT
