--- a/data/cards/81470373.yaml
+++ b/data/cards/81470373.yaml
@@ -12,7 +12,7 @@ name:
   ko: <ruby>BF<rt>블랙 페더</rt></ruby>－독풍의 시문
   ko_rr: Beullaek Pedeo - Dokpung-ui Simun
   zh-TW:
-  zh-CN: 黑羽－毒风之砂蒙
+  zh-CN: 黑羽-毒风之砂蒙
 text:
   en: |-
     If you control no monsters and have this card in your hand: You can banish 1 other "Blackwing" monster from your hand; place 1 "Black Whirlwind" from your Deck face-up in your Spell & Trap Zone, then, either send this card to the GY, or immediately after this effect resolves, Normal Summon it without Tributing. You cannot Special Summon monsters from the Extra Deck for the rest of this turn, except DARK monsters. You can only use this effect of "Blackwing - Simoon the Poison Wind" once per turn. During the End Phase, send the "Black Whirlwind" placed by this effect to the GY, and if you do, take 1000 damage.
@@ -32,7 +32,7 @@ text:
     이 카드명의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 몬스터가 존재하지 않을 경우, 패에서 이 카드 이외의 "BF(블랙 페더)" 몬스터 1장을 제외하고 발동할 수 있다. 덱에서 "검은 선풍" 1장을 자신의 마법 & 함정 존에 앞면 표시로 놓는다. 그 후, 패의 이 카드를 릴리스 없이 일반 소환하거나, 묘지로 보낸다. 이 효과로 놓은 "검은 선풍"은 엔드 페이즈에 묘지로 보내지고, 자신은 1000 데미지를 받는다. 이 효과의 발동 후, 턴 종료시까지 자신은 어둠 속성 몬스터밖에 엑스트라 덱에서 특수 소환할 수 없다.
   zh-TW:
   zh-CN: |-
-    此卡名的效果1回合仅可使用1次。①：自己场上不存在怪兽的情况下，从手牌将此卡以外的1只“黑羽”怪兽除外可以发动。从牌组将1张“黑旋风”以表侧表示放在自己的魔法与陷阱区域。然后，将手牌的此卡无需解放进行召唤，或送至墓地。以此效果所放的“黑旋风”在结束阶段会被送至墓地，自己受到1000伤害。此效果发动后，直至回合结束时为止自己从额外牌组仅可特殊召唤暗属性怪兽。
+    此卡名的效果1回合仅可使用1次。①：自己场上不存在怪兽的情况下，从手牌将此卡以外的1只“黑羽”怪兽除外可以发动。从牌组将1张“黑旋风”以表侧表示放在自己的魔法与陷阱区域。然后，将手牌的此卡无需解放迳行召唤，或送至墓地。以此效果所放的“黑旋风”在结束阶段会被送至墓地，自己受到1000伤害。此效果发动后，直至回合结束时为止自己从额外牌组仅可特殊召唤暗属性怪兽。
 card_type: Monster
 monster_type_line: Winged Beast / Effect
 attribute: DARK
