--- a/data/cards/10045474.yaml
+++ b/data/cards/10045474.yaml
@@ -8,7 +8,7 @@ name:
   it: Impermanenza Infinita
   pt: Impermanência Infinita
   ja: <ruby>無<rt>む</rt></ruby><ruby>限<rt>げん</rt></ruby><ruby>泡<rt>ほう</rt></ruby><ruby>影<rt>よう</rt></ruby>
-  ja_romaji: Mugen Hōyō
+  ja_romaji: Mugenhōyō
   ko: 무한포영
   ko_rr: Muhanpoyeong
   zh-TW:
