--- a/data/cards/15693423.yaml
+++ b/data/cards/15693423.yaml
@@ -8,7 +8,7 @@ name:
   it: Scontro ad Armi Pari
   pt: Confronto Justo
   ja: <ruby>拮<rt>きっ</rt></ruby><ruby>抗<rt>こう</rt></ruby><ruby>勝<rt>しょう</rt></ruby><ruby>負<rt>ぶ</rt></ruby>
-  ja_romaji: Kikkō Shōbu
+  ja_romaji: Kikkōshōbu
   ko: 길항승부
   ko_rr: Gilhangseungbu
   zh-TW:
