--- a/data/cards/20899496.yaml
+++ b/data/cards/20899496.yaml
@@ -8,7 +8,7 @@ name:
   it: Prigione del Drago di Ghiaccio
   pt: Prisão do Dragão de Gelo
   ja: <ruby>天<rt>てん</rt></ruby><ruby>龍<rt>ろう</rt></ruby><ruby>雪<rt>せつ</rt></ruby><ruby>獄<rt>ごく</rt></ruby>
-  ja_romaji: Tenrō Setsugoku
+  ja_romaji: Tenrōsetsugoku
   ko: 천룡설옥
   ko_rr: Cheonnyongseol-euk
   zh-TW:
