--- a/data/cards/49238328.yaml
+++ b/data/cards/49238328.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     No começo da sua Fase Principal 1: bana, com a face para baixo, 3 ou 6 cards aleatórios com a face para baixo do seu Deck Adicional; compre 1 card para cada 3 cards banidos. Pelo resto deste turno depois que este card resolver, você não pode comprar nenhum card devido a efeitos de card.
   ja: |-
-    ①：自分メインフェイズ１開始時に、自分のＥＸデッキの裏側表示のカード３枚または６枚をランダムに裏側表示で除外して発動できる。除外したカード３枚につき１枚、自分はデッキからドローする。このカードの発動後、ターン終了時まで自分はカードの効果でドローできない。
+    ①：自分メインフェイズ１開始時に、自分のＥＸデッキの裏側のカード３枚か６枚をランダムに裏側で除外して発動できる。除外したカード３枚につき１枚、自分はドローする。このカードの発動後、ターン終了時まで自分はカードの効果でドローできない。
   ko: |-
     ①: 자신 메인 페이즈 1 개시시에, 자신의 엑스트라 덱의 뒷면 표시의 카드 3장 또는 6장을 무작위로 뒷면 표시로 제외하고 발동할 수 있다. 제외한 카드 3장당 1장, 자신은 덱에서 드로우한다. 이 카드의 발동 후, 턴 종료시까지 자신은 카드의 효과로 드로우할 수 없다.
   zh-TW:
