--- a/data/cards/54693926.yaml
+++ b/data/cards/54693926.yaml
@@ -38,10 +38,10 @@ property: Normal
 images:
 - index: 1
   image: '  DarkRulerNoMore-SD39-JP-C.png'
-  illustration: '    DarkRulerNoMore-LOD2-JP-VG-artwork.png'
+  illustration: '    DarkRulerNoMore-MADU-JP-VG-artwork.png'
 - index: '1.1'
   image: DarkRulerNoMore-MP22-EN-UR-1E.png
-  illustration: DarkRulerNoMore-LOD2-EN-VG-artwork.jpg
+  illustration: DarkRulerNoMore-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: TN19-EN014
