--- a/data/cards/65029288.yaml
+++ b/data/cards/65029288.yaml
@@ -12,7 +12,7 @@ name:
   ko: <ruby>EM<rt>엔터메이트</rt></ruby> 오드아이즈 메탈 크로우
   ko_rr:
   zh-TW:
-  zh-CN: 娱乐伙伴 异色眼钢爪狼
+  zh-CN: 娱乐伙伴 异色眼钢爪
 text:
   en: |-
     1 "Odd-Eyes" monster + 1 "Performapal" monster
@@ -40,8 +40,8 @@ text:
     이 카드는 융합 소재로 할 수 없다. ①: "융합"의 효과로 융합 소환한 이 카드는 다른 카드의 효과를 받지 않는다. ②: 이 카드의 공격 선언시에 발동한다. 자신 필드의 모든 몬스터의 공격력은 배틀 페이즈 종료시까지 300 올린다.
   zh-TW:
   zh-CN: |-
-    「异色眼」怪兽＋「娱乐伙伴」怪兽
-    这张卡不能作为融合素材。①：「融合」的效果融合召唤的这张卡不受其他卡的效果影响。②：这张卡的攻击宣言时发动。自己场上的全部怪兽的攻击力直到战斗阶段结束时上升300。
+    “异色眼”怪兽＋“娱乐伙伴”怪兽
+    此卡不可作为融合素材。①：以“融合”的效果融合召唤的此卡不受其他卡效果的影响。②：此卡的攻击宣言时发动。自己场上所有怪兽的攻击力直至战斗阶段结束时为止上升３００。
 card_type: Monster
 monster_type_line: Dragon / Fusion / Effect
 attribute: DARK
@@ -91,6 +91,11 @@ sets:
     set_name: Premium Pack Vol.12
     rarities:
     - Ultra Rare
+  zh-CN:
+  - set_number: SD29-SCP07
+    set_name: 'Structure Deck: Master of Pendulum Deck Enhancement Pack'
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
