--- a/data/cards/67494157.yaml
+++ b/data/cards/67494157.yaml
@@ -8,7 +8,7 @@ name:
   it: Drago Strisciante
   pt: Dragão Rastejante
   ja: <ruby>地<rt>ち</rt></ruby>を<ruby>這<rt>は</rt></ruby>うドラゴン
-  ja_romaji: Chi wo Hau Doragon
+  ja_romaji: Chi o Hau Doragon
   ko: 땅을 기는 드래곤
   ko_rr:
   zh-TW:
