--- a/data/cards/04031928.yaml
+++ b/data/cards/04031928.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Escolha 1 monstro que seu oponente controla; tome o controle dele até a Fase Final.
   ja: |-
-    相手フィールド上に存在するモンスター１体を選択して発動する。このターンのエンドフェイズ時まで、選択したモンスターのコントロールを得る。
+    ①：相手フィールドのモンスター１体を対象として発動できる。そのモンスターのコントロールをエンドフェイズまで得る。
   ko: |-
     상대 필드 위의 몬스터 1장을 선택한다. 발동 턴의 엔드 페이즈까지 선택한 몬스터를 컨트롤한다.
   zh-TW:
