--- a/data/cards/10817524.yaml
+++ b/data/cards/10817524.yaml
@@ -12,7 +12,7 @@ name:
   ko: 시조룡 와이암
   ko_rr:
   zh-TW:
-  zh-CN: 始祖龙 古龙
+  zh-CN: 始祖龙
 text:
   en: |-
     2 Normal Monsters
@@ -40,8 +40,8 @@ text:
     이 카드는 융합 소환으로밖에 특수 소환할 수 없다. ① : "시조룡 와이암"은 자신 필드에 1장밖에 앞면 표시로 존재할 수 없다. ② : 이 카드가 몬스터 존에 존재하는 한, 이 카드는 일반 몬스터 이외의 몬스터와의 전투로는 파괴되지 않으며, 이 카드 이외의 몬스터의 효과를 받지 않는다.
   zh-TW:
   zh-CN: |-
-    通常怪兽×2
-    这张卡不用融合召唤不能特殊召唤。①：「始祖龙 古龙」在自己场上只能有1只表侧表示存在。②：这张卡只要在怪兽区域存在，不会被和通常怪兽以外的怪兽的战斗破坏，不受这张卡以外的怪兽的效果影响。
+    通常怪兽×２
+    此卡仅可以融合召唤特殊召唤。①：“始祖龙”在自己场上仅可有１只以表侧表示存在。②：只要此卡存在于怪兽区域，不会因与通常怪兽以外的怪兽的战斗被破坏，不受此卡以外怪兽的效果影响。
 card_type: Monster
 monster_type_line: Dragon / Fusion / Effect
 attribute: DARK
@@ -161,6 +161,11 @@ sets:
     set_name: The New Challengers
     rarities:
     - Rare
+  zh-CN:
+  - set_number: SD29-SCP08
+    set_name: 'Structure Deck: Master of Pendulum Deck Enhancement Pack'
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
