--- a/data/cards/24224830.yaml
+++ b/data/cards/24224830.yaml
@@ -8,7 +8,7 @@ name:
   it: Richiamato dalla Tomba
   pt: Chamado da Cova
   ja: <ruby>墓<rt>はか</rt></ruby><ruby>穴<rt>あな</rt></ruby>の<ruby>指<rt>し</rt></ruby><ruby>名<rt>めい</rt></ruby><ruby>者<rt>しゃ</rt></ruby>
-  ja_romaji: Haka'ana no Shimeisha
+  ja_romaji: Hakaana no Shimeisha
   ko: 무덤의 지명자
   ko_rr: Mudeom-ui Jimeongja
   zh-TW:
@@ -32,7 +32,7 @@ text:
     ①: 상대 묘지의 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 제외한다. 다음 턴의 종료시까지, 이 효과로 제외한 몬스터 및 그 몬스터와 원래의 카드명이 같은 몬스터의 효과는 무효화된다.
   zh-TW:
   zh-CN: |-
-    ①：以对手墓地的1只怪兽为对象可以发动。将该怪兽除外。直至下个回合结束时为止，以此效果除外的怪兽及与该怪兽原本卡名相同的怪兽的效果无效化。
+    ①：以对手墓地的１只怪兽为对象可以发动。将该怪兽除外。直至下个回合结束时为止，以此效果除外的怪兽及与该怪兽原本卡名相同的怪兽的效果无效化。
 card_type: Spell
 property: Quick-Play
 images:
