--- a/data/cards/35261759.yaml
+++ b/data/cards/35261759.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Bana 10 cards do topo do seu Deck, com a face para baixo; compre 2 cards. Você só pode ativar 1 "Pote dos Desejos" por turno.
   ja: |-
-    このカード名のカードは１ターンに１枚しか発動できない。①：自分のデッキの上からカード１０枚を裏側表示で除外して発動できる。自分はデッキから２枚ドローする。
+    このカード名のカードは１ターンに１枚しか発動できない。①：自分のデッキの上からカード１０枚を裏側で除外して発動できる。自分は２枚ドローする。
   ko: |-
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신의 덱 위에서 카드 10장을 뒷면 표시로 제외하고 발동할 수 있다. 자신은 덱에서 2장 드로우한다.
   zh-TW:
