--- a/data/cards/38342335.yaml
+++ b/data/cards/38342335.yaml
@@ -34,7 +34,7 @@ text:
     Se este card for Invocado por Invocação-Link: você pode descartar 1 card e, depois, escolha 1 card no campo; embaralhe-o no Deck e, depois, se este card estava co-linkado quando este efeito foi ativado, você pode comprar 1 card. Você só pode usar este efeito de "Cavaleiro do Pesadelo Unicórnio" uma vez por turno. Enquanto qualquer monstro "Cavaleiro(a) do Pesadelo" co-linkado estiver no campo, em sua compra normal na sua Fase de Compra, em vez de comprar apenas 1 card, compre 1 card para cada nome de card diferente entre esses monstros "Cavaleiro(a) do Pesadelo" co-linkados.
   ja: |-
     カード名が異なるモンスター２体以上
-    このカード名の①の効果は１ターンに１度しか使用できない。①：このカードがリンク召喚に成功した場合、手札を１枚捨て、フィールドのカード１枚を対象として発動できる。そのカードを持ち主のデッキに戻す。この効果の発動時にこのカードが相互リンク状態だった場合、さらに自分はデッキから１枚ドローできる。②：自分ドローフェイズの通常のドローの枚数は、フィールドに相互リンク状態の「トロイメア」モンスターが存在する限り、その「トロイメア」モンスターの種類の数になる。
+    このカード名の①の効果は１ターンに１度しか使用できない。①：このカードがリンク召喚に成功した場合、手札を１枚捨て、フィールドのカード１枚を対象として発動できる。そのカードを持ち主のデッキに戻す。この効果の発動時にこのカードが相互リンク状態だった場合、さらに自分はデッキから１枚ドローできる。②：相互リンク状態の「トロイメア」モンスターが存在する限り、自分ドローフェイズの通常のドローの枚数は、その「トロイメア」モンスターの種類の数になる。
   ko: |-
     카드명이 다른 몬스터 2장 이상
     이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 링크 소환에 성공했을 경우, 패를 1장 버리고, 필드의 카드 1장을 대상으로 하여 발동할 수 있다. 그 카드를 주인의 덱으로 되돌린다. 이 효과의 발동시에 이 카드가 상호 링크 상태였을 경우, 추가로 자신은 덱에서 1장 드로우할 수 있다. ②: 자신 드로우 페이즈의 일반 드로우의 매수는, 필드에 상호 링크 상태의 "트로이메어" 몬스터가 존재하는 한, 그 "트로이메어" 몬스터의 종류의 수가 된다.
