--- a/data/cards/39030163.yaml
+++ b/data/cards/39030163.yaml
@@ -8,7 +8,7 @@ name:
   it: Drago Fotonico Armatura Completa Occhi Galattici
   pt: Dragão de Fóton de Armadura Completa de Olhos das Galáxias
   ja: ギャラクシーアイズ <ruby>ＦＡ<rt>フルアーマー</rt></ruby>・フォトン・ドラゴン
-  ja_romaji: Gyarakushīaizu Furu Āmā Foton Doragon
+  ja_romaji: Gyarakushīaizu Furuāmā Foton Doragon
   ko: 갤럭시아이즈 FA<rt>풀아머</rt> 포톤 드래곤
   ko_rr: Gaelleoksi-aijeu Pul-ameo Poton Deuraegon
   zh-TW:
@@ -34,10 +34,10 @@ text:
     Você também pode Invocar este card por Invocação-Xyz ao usar um Monstro Xyz "Olhos das Galáxias" que você controla como matéria, exceto "Dragão de Fóton de Armadura Completa de Olhos das Galáxias". (Transfira as matérias dele para este card.) Uma vez por turno: você pode escolher até 2 Cards de Equipamento equipados a este card; associe-os a este card como matérias. Uma vez por turno: você pode desassociar 1 matéria deste card e, depois, escolher 1 card com a face para cima que seu oponente controla; destrua-o.
   ja: |-
     レベル８モンスター×３
-    このカードは「ギャラクシーアイズ ＦＡ・フォトン・ドラゴン」以外の自分フィールドの「ギャラクシーアイズ」Ｘモンスターの上にこのカードを重ねてＸ召喚する事もできる。①：１ターンに１度、このカードの装備カードを２枚まで対象として発動できる。そのカードをこのカードの下に重ねてＸ素材とする。②：１ターンに１度、このカードのＸ素材を１つ取り除き、相手フィールドの表側表示カード１枚を対象として発動できる。そのカードを破壊する。
+    このカードは「ギャラクシーアイズ ＦＡ・フォトン・ドラゴン」以外の自分フィールドの「ギャラクシーアイズ」Ｘモンスターの上に重ねてＸ召喚する事もできる。①：１ターンに１度、このカードの装備カードを２枚まで対象として発動できる。そのカードをこのカードの下に重ねてＸ素材とする。②：１ターンに１度、このカードのＸ素材を１つ取り除き、相手フィールドの表側表示のカード１枚を対象として発動できる。そのカードを破壊する。
   ko: |-
     레벨 8 몬스터 × 3
-    이 카드는 "갤럭시아이즈 FA(풀아머) 포톤 드래곤" 이외의 자신 필드의 "갤럭시아이즈" 엑시즈 몬스터의 위에 이 카드를 겹쳐 엑시즈 소환한 수도 있다. ①: 1턴에 1번, 이 카드의 장착 카드를 2장까지 대상으로 하고 발동할 수 있다. 그 카드를 이 카드의 아래에 겹쳐 엑시즈 소재로 한다. ②: 1턴에 1번, 이 카드의 엑시즈 소재를 1개 제거하고, 상대 필드의 앞면 표시 카드 1장을 대상으로 하여 발동할 수 있다. 그 카드를 파괴한다.
+    이 카드는 "갤럭시아이즈 FA(풀아머) 포톤 드래곤" 이외의 자신 필드의 "갤럭시아이즈" 엑시즈 몬스터의 위에 이 카드를 겹쳐 엑시즈 소환할 수도 있다. ①: 1턴에 1번, 이 카드의 장착 카드를 2장까지 대상으로 하고 발동할 수 있다. 그 카드를 이 카드의 아래에 겹쳐 엑시즈 소재로 한다. ②: 1턴에 1번, 이 카드의 엑시즈 소재를 1개 제거하고, 상대 필드의 앞면 표시 카드 1장을 대상으로 하여 발동할 수 있다. 그 카드를 파괴한다.
   zh-TW:
   zh-CN: |-
     8星怪兽×3
