--- a/data/cards/44405066.yaml
+++ b/data/cards/44405066.yaml
@@ -34,7 +34,7 @@ text:
     Não pode ser destruído por efeitos de card enquanto tiver Matérias Xyz. Enquanto este card tiver Matérias Xyz, sempre que seu oponente ativar um card ou efeito, cause 500 de dano ao seu oponente imediatamente depois que ele resolver. Uma vez por turno (Efeito Rápido): você pode desassociar 1 Matéria Xyz deste card e, depois, escolha 1 Monstro Normal "Olhos Vermelhos" no seu Cemitério; Invoque-o por Invocação-Especial.
   ja: |-
     レベル７モンスター×２
-    ①：<ruby>Ｘ<rt>エクシーズ</rt></ruby>素材を持ったこのカードは効果では破壊されない。②：<ruby>Ｘ<rt>エクシーズ</rt></ruby>素材を持ったこのカードがモンスターゾーンに存在する限り、相手が魔法・罠・モンスターの効果を発動する度に相手に５００ダメージを与える。③：１ターンに１度、このカードの<ruby>Ｘ<rt>エクシーズ</rt></ruby>素材を１つ取り除き、自分の墓地の「レッドアイズ」通常モンスター１体を対象として発動できる。そのモンスターを特殊召喚する。この効果は相手ターンでも発動できる。
+    ①：Ｘ素材を持っているこのカードは効果では破壊されない。②：Ｘ素材を持っているこのカードがモンスターゾーンに存在する限り、相手が魔法・罠・モンスターの効果を発動する度に相手に５００ダメージを与える。③：１ターンに１度、このカードのＸ素材を１つ取り除き、自分の墓地の「レッドアイズ」通常モンスター１体を対象として発動できる。そのモンスターを特殊召喚する。この効果は相手ターンでも発動できる。
   ko: |-
     레벨 7 몬스터 × 2
     ①: 엑시즈 소재를 가진 이 카드는 효과로는 파괴되지 않는다. ②: 엑시즈 소재를 가진 이 카드가 몬스터 존에 존재하는 한, 상대가 마법 / 함정 / 몬스터의 효과를 발동할 때마다 상대에게 500 데미지를 준다. ③: 1턴에 1번, 이 카드의 엑시즈 소재를 1개 제거하고, 자신 묘지의 "붉은 눈" 일반 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 특수 소환한다. 이 효과는 상대 턴에도 발동할 수 있다.
