--- a/data/cards/45819647.yaml
+++ b/data/cards/45819647.yaml
@@ -41,7 +41,7 @@ text:
   zh-TW:
   zh-CN: |-
     包括魔法师族怪兽在内的怪兽2只以上
-    ①：此卡连接召唤成功的情况下发动。在此卡上放相当于双方场上・墓地魔法卡数量的魔力计数物。②：只要场上有"恩底弥翁"卡存在，对手不可将此卡选择为攻击对象。③：1回合1次，在自己・对手的主要阶段，去除自己场上的3个魔力计数物可以发动。从自己的手牌・墓地挑选1只魔法师族怪兽，以守备表示特殊召唤至此卡连接端的自己场上。
+    ①：此卡连接召唤成功的情况下发动。在此卡上放相当于双方场上・墓地魔法卡数量的魔力计数物。②：只要场上有“恩底弥翁”卡存在，对手不可将此卡选择为攻击对象。③：1回合1次，在自己・对手的主要阶段，去除自己场上的3个魔力计数物可以发动。从自己的手牌・墓地挑选1只魔法师族怪兽，以守备表示特殊召唤至此卡连接端的自己场上。
 card_type: Monster
 monster_type_line: Spellcaster / Link / Effect
 attribute: LIGHT
