--- a/data/cards/46448938.yaml
+++ b/data/cards/46448938.yaml
@@ -27,9 +27,9 @@ text:
   pt: |-
     Durante a Fase Final do turno em que este card for ativado, adicione Cards de Magia "Livro de Magia" do seu Deck à sua mão, exceto "Livro de Magia do Julgamento", até o número de Cards de Magia ativados depois da resolução deste card e, depois, você pode Invocar por Invocação-Especial do seu Deck 1 monstro do Tipo Mago cujo Nível seja menor ou igual ao número de cards adicionados à sua mão por este efeito. Você só pode ativar 1 "Livro de Magia do Julgamento" por turno.
   ja: |-
-    このカードを発動したターンのエンドフェイズ時、このカードの発動後に自分または相手が発動した魔法カードの枚数分まで、自分のデッキから「魔導書の神判」以外の「魔導書」と名のついた魔法カードを手札に加える。その後、この効果で手札に加えたカードの数以下のレベルを持つ魔法使い族モンスター１体をデッキから特殊召喚できる。「魔導書の神判」は１ターンに１枚しか発動できない。
+    このカード名のカードは１ターンに１枚しか発動できない。①：このカードを発動したターンのエンドフェイズに、このカードの発動後に自分または相手が発動した魔法カードの数まで、デッキから「魔導書の神判」以外の「魔導書」魔法カードを手札に加える。その後、この効果で手札に加えたカードの数以下のレベルを持つ魔法使い族モンスター１体をデッキから特殊召喚できる。
   ko: |-
-    이 카드를 발동한 턴의 엔드 페이즈시, 이 카드의 발동 후에 자신 또는 상대가 발동한 마법 카드의 매수만큼까지, 자신의 덱에서 "마도서의 신판" 이외의 "마도서" 라는 이름이 붙은 마법 카드를 패에 넣는다. 그 후, 이 효과로 패에 넣은 카드의 수 이하의 레벨을 가진 마법사족 몬스터 1장을 덱에서 특수 소환할 수 있다. "마도서의 신판" 은 1턴에 1장밖에 발동할 수 없다.
+    이 카드를 발동한 턴의 엔드 페이즈시, 이 카드의 발동 후에 자신 또는 상대가 발동한 마법 카드의 매수만큼까지, 자신의 덱에서 "마도서의 신판" 이외의 "마도서"라는 이름이 붙은 마법 카드를 패에 넣는다. 그 후, 이 효과로 패에 넣은 카드의 수 이하의 레벨을 가진 마법사족 몬스터 1장을 덱에서 특수 소환할 수 있다. "마도서의 신판"은 1턴에 1장밖에 발동할 수 없다.
   zh-TW: |-
     此卡发动回合的结束阶段时，从我方牌组将除「魔導書的神判」以外的冠有「魔導書」之名的魔法卡加入手牌，其数量上限为此卡发动后我方或对手发动的魔法卡数量。之后，可从牌组特殊召唤1只持有等级为因此效果加入手牌卡牌张数或以下的魔法师族怪兽。「魔導書的神判」1回合只可发动1张。
   zh-CN: |-
