--- a/data/cards/62107981.yaml
+++ b/data/cards/62107981.yaml
@@ -3,7 +3,7 @@ password: 62107981
 name:
   en: Elemental HERO Knospe
   de: Elementar-HELD Knospe
-  es: Héroe Elemental Knospe
+  es: HÉROE Elemental Knospe
   fr: Bourgeon, HÉROS Élémentaire
   it: Knospe EROE Elementale
   pt: Heroí Elementar Knospe
@@ -19,7 +19,7 @@ text:
   de: |-
     Jedes Mal, wenn diese Karte deinem Gegner Kampfschaden zufügt, erhält sie 100 ATK und verliert 100 DEF. Solange du ein anderes offenes „Elementarheld“-Monster kontrollierst, kann dein Gegner diese Karte nicht als Angriffsziel bestimmen und diese Karte kann deinen Gegner direkt angreifen.
   es: |-
-    Cada vez que esta carta inflige daño de batalla a tu adversario, gana 100 ATK y pierde 100 DEF. Mientras controles otro "Héroe Elemental" boca arriba, tu adversario no puede seleccionar esta carta como objetivo de un ataque y esta carta puede atacar a tu adversario directamente.
+    Cada vez que esta carta inflige daño de batalla a tu adversario, gana 100 ATK y pierde 100 DEF. Mientras controles otro "HÉROE Elemental" boca arriba, tu adversario no puede seleccionar esta carta como objetivo de un ataque y esta carta puede atacar a tu adversario directamente.
   fr: |-
     À chaque fois que cette carte inflige des dommages de combat à votre adversaire, elle gagne 100 points d'ATK et perd 100 points de DEF. Tant que vous contrôlez un autre monstre "HÉROS Élémentaire" face recto, votre adversaire ne peut pas sélectionner cette carte comme cible d'une attaque, et cette carte peut attaquer directement votre adversaire.
   it: |-
