--- a/data/cards/72167543.yaml
+++ b/data/cards/72167543.yaml
@@ -36,8 +36,8 @@ text:
     魔法使い族レベル４モンスター×２
     このカードは自分メインフェイズ２に、自分フィールドのランク３以下のＸモンスターの上に重ねてＸ召喚する事もできる。①：このカードの攻撃力は、このカードのＸ素材の数×２００アップする。②：このカードが守備表示モンスターを攻撃した場合、その守備力を攻撃力が超えた分だけ戦闘ダメージを与える。③：このカードが戦闘を行ったダメージ計算後に発動する。このカードのＸ素材を１つ取り除く。
   ko: |-
-    마법사족 레벨 4 몬스터 x 2
-    이 카드는 자신의 랭크 3 이하인 엑시즈 몬스터의 위에 이 카드를 겹치고 이 카드를 엑시즈 소환할 수도 있다. 이 방법에 의한 엑시즈 소환은 자신의 메인 페이즈 2에서밖에 할 수 없다. 이 카드의 공격력은, 이 카드의 엑시즈 소재의 수 x 200 포인트 올린다. 이 카드가 수비 표시 몬스터를 공격했을 때, 그 수비력을 공격력이 넘었으면, 그 수치만큼 상대 라이프에 전투 데미지를 준다. 이 카드가 전투를 실행한 데미지 계산 후, 이 카드의 엑시즈 소재를 1개 제거한다.
+    마법사족 레벨 4 몬스터 × 2
+    이 카드는 자신 메인 페이즈 2 에, 자신 필드의 랭크 3 이하의 엑시즈 몬스터 위에 겹쳐 엑시즈 소환할 수도 있다. ①: 이 카드의 공격력은, 이 카드의 엑시즈 소재의 수 × 200 올린다. ②: 이 카드가 수비 표시 몬스터를 공격했을 경우, 그 수비력을 공격력이 넘은 만큼만 전투 데미지를 준다. ③: 이 카드가 전투를 실행한 데미지 계산 후에 발동한다. 이 카드의 엑시즈 소재를 1개 제거한다.
   zh-TW:
   zh-CN: |-
     魔法师族等级4怪兽×2
