--- a/data/cards/73539069.yaml
+++ b/data/cards/73539069.yaml
@@ -41,7 +41,7 @@ text:
   zh-TW:
   zh-CN: |-
     等级4以下龙族怪兽1只
-    此卡名的①②效果1回合仅可各使用1次。①：此卡连接召唤成功的情况下可以发动。从牌组将1张"轮转导引扇区"加入手牌。②：以自己场上的1只表侧表示怪兽和自己墓地的1只"枪弹"怪兽为对象可以发动。将对象之场上的怪兽破坏，将对象之墓地的怪兽加入手牌。
+    此卡名的①②效果1回合仅可各使用1次。①：此卡连接召唤成功的情况下可以发动。从牌组将1张“轮转导引扇区”加入手牌。②：以自己场上的1只表侧表示怪兽和自己墓地的1只“枪弹”怪兽为对象可以发动。将对象之场上的怪兽破坏，将对象之墓地的怪兽加入手牌。
 card_type: Monster
 monster_type_line: Dragon / Link / Effect
 attribute: DARK
