--- a/data/cards/83121692.yaml
+++ b/data/cards/83121692.yaml
@@ -22,7 +22,7 @@ text:
     Muss als Fusionsbeschwörung beschworen werden und kann nicht auf andere Art als Spezialbeschwörung beschworen werden. Du kannst 1 andere Karte, die du kontrollierst, auf den Friedhof legen, um 1 Monster zu wählen, das du kontrollierst; solange diese Karte offen auf dem Spielfeld liegt, kann das Monster nicht durch Kampf zerstört werden.
   es: |-
     "HÉROE Elemental Avian" + "HÉROE Elemental Sparkman" + "HÉROE Elemental Bubbleman"
-    Este monstruo no puede ser Invocado mediante una Invocación Especial excepto mediante una Invocación de Fusión. Manda 1carta (exceptuando ésta) de tu Campo al Cementerio para seleccionar 1 monstruo en tu Campo. Mientras esta carta esté boca arriba en el Campo, el monstruo seleccionado no es destruido como resultado de una batalla. (El cálculo de daño se aplica normalmente.)
+    Este monstruo no puede ser Invocado mediante una Invocación Especial excepto mediante una Invocación de Fusión. Manda 1 carta (exceptuando ésta) de tu Campo al Cementerio para seleccionar 1 monstruo en tu Campo. Mientras esta carta esté boca arriba en el Campo, el monstruo seleccionado no es destruido como resultado de una batalla. (El cálculo de daño se aplica normalmente).
   fr: |-
     "Avian, HÉROS Élémentaire" + "Sparkman, HÉROS Élémentaire" + "Bubbleman, HÉROS Élémentaire"
     Ce monstre ne peut pas être Invoqué par Invocation Spéciale excepté par une Invocation Fusion. En envoyant 1 carte (exceptée cette carte) de votre Terrain au Cimetière, sélectionnez 1 monstre sur votre Terrain. Tant que cette carte est face recto sur le Terrain, le monstre sélectionné n'est pas détruite à l'issue d'un combat. (Le calcul des dommages est appliqué normalement.)
