--- a/data/cards/84815190.yaml
+++ b/data/cards/84815190.yaml
@@ -34,13 +34,13 @@ text:
     Uma vez por turno: você pode escolher 1 card no campo; destrua-o. Uma vez enquanto estiver com a face para cima no campo, quando um card ou efeito for ativado (Efeito Rápido): você pode negar a ativação e, se isso acontecer, destrua esse card. Você só pode usar o efeito anterior de "Baronne de Fleur" uma vez por turno. Uma vez por turno, durante a Fase de Apoio: você pode escolher 1 monstro de Nível 9 ou menos no seu Cemitério; devolva este card para o Deck Adicional e, se isso acontecer, Invoque esse monstro por Invocação-Especial.
   ja: |-
     チューナー＋チューナー以外のモンスター１体以上
-    このカード名の②の効果は１ターンに１度しか使用できない。①：１ターンに１度、フィールドのカード１枚を対象として発動できる。そのカードを破壊する。②：このカードがフィールドに表側表示で存在する限り１度だけ、魔法・罠・モンスターの効果が発動した時に発動できる。その発動を無効にし破壊する。③：お互いのスタンバイフェイズに、自分の墓地のレベル９以下のモンスター１体を対象として発動できる。このカードを持ち主のＥＸデッキに戻し、そのモンスターを特殊召喚する。
+    このカード名の②の効果は１ターンに１度しか使用できない。①：１ターンに１度、フィールドのカード１枚を対象として発動できる。そのカードを破壊する。②：このカードがフィールドに表側表示で存在する限り１度だけ、魔法・罠・モンスターの効果が発動した時に発動できる。その発動を無効にし破壊する。③：お互いのスタンバイフェイズに、自分の墓地のレベル９以下のモンスター１体を対象として発動できる。このカードを持ち主のＥＸデッキに戻し、対象のモンスターを特殊召喚する。
   ko: |-
     튜너 ＋ 튜너 이외의 몬스터 1장 이상
     이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 1턴에 1번, 필드의 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 파괴한다. ②: 이 카드가 필드에 앞면 표시로 존재하는 한 1번만, 마법 / 함정 / 몬스터의 효과가 발동했을 때에 발동할 수 있다. 그 발동을 무효로 하고 파괴한다. ③: 서로의 스탠바이 페이즈에, 자신 묘지의 레벨 9 이하의 몬스터 1장을 대상으로 하고 발동할 수 있다. 이 카드를 주인의 엑스트라 덱으로 되돌리고, 그 몬스터를 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    协调＋1只以上协调以外的怪兽
+    协调+1只以上协调以外的怪兽
     此卡名的②效果1回合仅可使用1次。①：1回合1次，以场上的1张卡为对象可以发动。将该卡破坏。②：只要此卡在场上以表侧表示存在，仅限1次，魔法・陷阱・怪兽的效果发动时可以发动。将该发动无效并破坏。③：在双方的准备阶段，以自己墓地的1只等级9以下的怪兽为对象可以发动。将此卡放回持有者的额外牌组，将该怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Warrior / Synchro / Effect
