--- a/data/cards/23516703.yaml
+++ b/data/cards/23516703.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Nenhum duelista pode Invocar mais de duas vezes por turno. (Invocações negadas contam para esse limite. Efeitos/cards negados que resultariam em uma Invocação não contam.)
   ja: |-
-    このカードがフィールド上に存在する限り、お互いのプレイヤーは１ターンに合計２回までしかモンスターを召喚・反転召喚・特殊召喚できない。
+    ①：このターン中にモンスターの召喚・反転召喚・特殊召喚に合計２回以上成功しているプレイヤーは、このカードが魔法＆罠ゾーンに存在する限り、モンスターを召喚・反転召喚・特殊召喚できない。
   ko: |-
     이 카드가 필드 위에 존재하는 한, 서로 플레이어는 1턴에 합계 2회까지밖에 몬스터를 일반 소환 / 반전 소환 / 특수 소환할 수 없다.
   zh-TW:
