--- a/data/cards/39765958.yaml
+++ b/data/cards/39765958.yaml
@@ -12,7 +12,7 @@ name:
   ko: 염마룡 레드 데몬
   ko_rr:
   zh-TW:
-  zh-CN: 琰魔龙 红莲魔
+  zh-CN: 琰魔龙 暗红恶魔
 text:
   en: |-
     1 Tuner + 1+ non-Tuner monsters
@@ -40,8 +40,8 @@ text:
     이 카드의 효과를 발동하는 턴에, 이 카드 이외의 몬스터는 공격할 수 없다. ①: 1턴에 1번, 자신 메인 페이즈 1에 발동할 수 있다. 이 카드 이외의 필드의 앞면 공격 표시 몬스터를 전부 파괴한다.
   zh-TW:
   zh-CN: |-
-    调整＋调整以外的怪兽1只以上
-    （这张卡的日文原卡名带有「恶魔/デーモン」）1回合1次，自己的主要阶段1才能发动。这张卡以外的场上表侧攻击表示存在的怪兽全部破坏。这个效果发动的回合，这张卡以外的怪兽不能攻击。
+    协调＋１只以上协调以外的怪兽
+    ①：１回合１次，在自己主要阶段１可以发动。将此卡以外的场上表侧攻击表示怪兽全部破坏。发动此效果的回合中，此卡以外的怪兽不可攻击。
 card_type: Monster
 monster_type_line: Dragon / Synchro / Effect
 attribute: DARK
@@ -118,6 +118,11 @@ sets:
     - Secret Rare
   - set_number: AE06-KR007
     set_name: Advanced Event Pack 2014 Vol.4
+    rarities:
+    - Super Rare
+  zh-CN:
+  - set_number: SD29-SCP11
+    set_name: 'Structure Deck: Master of Pendulum Deck Enhancement Pack'
     rarities:
     - Super Rare
 limit_regulation:
