--- a/data/cards/89558743.yaml
+++ b/data/cards/89558743.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Revele 1 monstro na sua mão, selecione 1 monstro do seu Deck que tenha exatamente 1 do mesmo Tipo, Atributo, Nível, ATK ou DEF e bana o monstro revelado da sua mão, com a face para baixo. Depois, adicione do Deck à sua mão, 1 monstro que tenha exatamente 1 do mesmo Tipo, Atributo, Nível, ATK ou DEF que o do monstro selecionado do seu Deck e bana o card selecionado do Deck, com a face para baixo. Você só pode ativar 1 "Mundo Pequeno" por turno.
   ja: |-
-    このカード名のカードは１ターンに１枚しか発動できない。①：手札のモンスター１体を相手に見せる。見せたモンスターの種族・属性・レベル・攻撃力・守備力の内、１つのみが同じモンスター１体をデッキから選んで確認し、手札から見せたモンスターを裏側表示で除外する。さらに確認したカードと種族・属性・レベル・攻撃力・守備力の内、１つのみが同じモンスター１体をデッキから手札に加え、デッキから確認したカードを裏側表示で除外する。
+    このカード名のカードは１ターンに１枚しか発動できない。①：手札のモンスター１体を相手に見せる。種族・属性・レベル・攻撃力・守備力の内１つのみが見せたモンスターと同じとなるモンスター１体をデッキから選んで確認し、手札から見せたモンスターを裏側表示で除外する。さらに、種族・属性・レベル・攻撃力・守備力の内１つのみが確認したモンスターと同じとなるモンスター１体をデッキから手札に加え、デッキから確認したモンスターを裏側表示で除外する。
   ko: |-
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 패의 몬스터 1장을 상대에게 보여준다. 보여준 몬스터의 종족 / 속성 / 레벨 / 공격력 / 수비력 중, 1개만이 같은 몬스터 1장을 덱에서 골라 확인하고, 패에서 보여준 몬스터를 뒷면 표시로 제외한다. 추가로 확인한 카드와 종족 / 속성 / 레벨 / 공격력 / 수비력 중, 1개만이 같은 몬스터 1장을 덱에서 패에 넣고, 덱에서 확인한 카드를 뒷면 표시로 제외한다.
   zh-TW:
