--- a/data/cards/99266988.yaml
+++ b/data/cards/99266988.yaml
@@ -27,12 +27,12 @@ text:
   pt: |-
     Envie 1 monstro de LUZ ou de TREVAS da sua mão para o Cemitério; adicione 1 monstro de LUZ ou de TREVAS que não pode ser Invocado por Invocação-Normal/Baixado do seu Deck à sua mão, com um Nível entre 4 e 8, e com um Atributo diferente que o desse monstro. Você pode banir este card do seu Cemitério e, depois, escolha 1 dos seus monstros de LUZ ou de TREVAS banidos que não pode ser Invocado por Invocação-Normal/Baixado; coloque esse monstro no fundo do Deck e, depois, compre 1 card. Você só pode usar cada efeito de "Caos Espacial" uma vez por turno.
   ja: |-
-    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：手札から光属性または闇属性のモンスター１体を墓地へ送って発動できる。そのモンスターとは属性が異なり、レベル４～８の通常召喚できない光・闇属性モンスター１体をデッキから手札に加える。②：墓地のこのカードを除外し、除外されている自分の通常召喚できない光・闇属性モンスター１体を対象として発動できる。そのモンスターをデッキの一番下に戻す。その後、自分はデッキから１枚ドローする。
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：手札から光・闇属性モンスター１体を墓地へ送って発動できる。そのモンスターとは属性が異なり、レベル４～８の通常召喚できない光・闇属性モンスター１体をデッキから手札に加える。②：墓地のこのカードを除外し、除外されている自分のモンスターの中から、通常召喚できない光・闇属性モンスター１体を対象として発動できる。そのモンスターをデッキの一番下に戻す。その後、自分はデッキから１枚ドローする。
   ko: |-
-    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 패에서 빛 속성 또는 어둠 속성 몬스터 1장을 묘지로 보내고 발동할 수 있다. 그 몬스터와는 속성이 다르고, 레벨 4~8 인 통상 소환할 수 없는 빛 / 어둠 속성 몬스터 1장을 덱에서 패에 넣는다. ②: 묘지의 이 카드를 제외하고, 제외되어 있는 자신의 통상 소환할 수 없는 빛 / 어둠 속성 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 덱 맨 아래로 되돌린다. 그 후, 자신은 덱에서 1장 드로우한다.
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 패에서 빛 속성 또는 어둠 속성의 몬스터 1장을 묘지로 보내고 발동할 수 있다. 그 몬스터와는 속성이 다르고, 레벨 4~8 의 통상 소환할 수 없는 빛 / 어둠 속성 몬스터 1장을 덱에서 패에 넣는다. ②: 묘지의 이 카드를 제외하고, 제외되어 있는 자신의 통상 소환할 수 없는 빛 / 어둠 속성 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 덱 맨 아래로 되돌린다. 그 후, 자신은 덱에서 1장 드로우한다.
   zh-TW:
   zh-CN: |-
-    此卡名的①②效果1回合仅可各使用1次。①：从手牌将1只光属性或暗属性的怪兽送至墓地可以发动。将1只属性与该怪兽不同、等级4～8、不可通常召唤的光・暗属性怪兽从牌组加入手牌。②：将墓地的此卡除外，以自己1只被除外的、不可通常召唤的光・暗属性怪兽为对象可以发动。将该怪兽放回牌组最下面。然后自己从牌组抽1张。
+    此卡名的①②效果１回合仅可各使用１次。①：从手牌将１只光属性或暗属性的怪兽送至墓地可以发动。将１只属性与该怪兽不同、等级４～８、不可通常召唤的光・暗属性怪兽从牌组加入手牌。②：将墓地的此卡除外，以自己１只被除外的、不可通常召唤的光・暗属性怪兽为对象可以发动。将该怪兽放回牌组最下面。然后自己从牌组抽１张。
 card_type: Spell
 property: Normal
 series:
