--- a/data/cards/47349116.yaml
+++ b/data/cards/47349116.yaml
@@ -12,7 +12,7 @@ name:
   ko: 별을 새기는 마술사
   ko_rr:
   zh-TW:
-  zh-CN: 星刻之魔术师
+  zh-CN: 星刻的魔术师
 text:
   en: |-
     2 Level 4 "Magician" Pendulum Monsters
@@ -40,8 +40,8 @@ text:
     이 카드는 상기의 카드를 엑시즈 소재로 한 엑시즈 소환으로만 엑스트라 덱에서 특수 소환할 수 있다. ①: 1턴에 1번, 이 카드의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 자신의 덱 / 묘지의 몬스터 및 자신의 엑스트라 덱의 앞면 표시 펜듈럼 몬스터 중에서, 마법사족 / 어둠 속성 몬스터 1장을 고르고 패에 넣는다. ②: 1턴에 1번, 자신의 몬스터 존 / 펜듈럼 존의 펜듈럼 몬스터 카드가 전투 / 효과로 파괴될 경우, 대신에 자신의 덱에서 마법사족 몬스터 1장을 묘지로 보낼 수 있다.
   zh-TW:
   zh-CN: |-
-    4星「魔术师」灵摆怪兽×2
-    这张卡用以上记的卡为XYZ素材的XYZ召唤才能从额外卡组特殊召唤。①：1回合1次，把这张卡1个XYZ素材取除才能发动。从自己的卡组·墓地的怪兽以及自己的额外卡组的表侧表示的灵摆怪兽之中选1只魔法师族·暗属性怪兽加入手卡。②：1回合1次，自己的怪兽区域·灵摆区域的灵摆怪兽卡被战斗·效果破坏的场合，可以作为代替从自己卡组把1只魔法师族怪兽送去墓地。
+    等级４“魔术师”灵摆怪兽×２
+    此卡仅可通过以上述卡作为超量素材的超量召唤来从额外牌组特殊召唤。①：１回合１次，去除此卡的１个超量素材可以发动。从自己牌组・墓地的怪兽及自己额外牌组的表侧表示灵摆怪兽中，挑选１只魔法师族・暗属性怪兽加入手牌。②：１回合１次，自己怪兽区域・灵摆区域的灵摆怪兽卡将被战斗・效果破坏的情况下，可从自己的牌组将１只魔法师族怪兽送至墓地作为代替。
 card_type: Monster
 monster_type_line: Spellcaster / Xyz / Effect
 attribute: DARK
@@ -89,6 +89,11 @@ sets:
     set_name: 'Structure Deck: Pendulum Evolution'
     rarities:
     - Ultra Rare
+  zh-CN:
+  - set_number: SD29-SCP15
+    set_name: 'Structure Deck: Master of Pendulum Deck Enhancement Pack'
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
