--- a/data/cards/67865534.yaml
+++ b/data/cards/67865534.yaml
@@ -12,7 +12,7 @@ name:
   ko: 희망의 마술사
   ko_rr: Huimang-ui Masulsa
   zh-TW:
-  zh-CN: 希望之魔术师
+  zh-CN: 希望的魔术师
 text:
   en: |-
     2 Level 4 monsters
@@ -40,13 +40,8 @@ text:
     레벨 4 가 펜듈럼 소환 가능한 경우에 엑스트라 덱의 앞면 표시의 이 카드는 펜듈럼 소환할 수 있다. 이 카드명의 ①의 몬스터 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 패에서 레벨 7 이하의 펜듈럼 몬스터 1장을 효과를 무효로 하고 수비 표시로 특수 소환한다. 그 후, 앞면 표시의 이 카드를 자신의 펜듈럼 존에 놓을 수 있다. ②: 이 카드가 펜듈럼 소환에 성공했을 경우, 자신 묘지의 펜듈럼 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 이 카드의 아래에 겹쳐 엑시즈 소재로 한다.
   zh-TW:
   zh-CN: |-
-    ←8 【灵摆】 8→
-    ①：1回合1次，自己或者对方的怪兽的攻击宣言时才能发动。那次攻击无效。那之后，这张卡破坏。
-    【怪兽效果】
-    4星怪兽×2
-    4星可以灵摆召唤的场合在额外卡组的表侧表示的这张卡可以灵摆召唤。这个卡名的①的怪兽效果1回合只能使用1次。
-    ①：把这张卡1个超量素材取除才能发动。从手卡把1只7星以下的灵摆怪兽效果无效守备表示特殊召唤。那之后，可以把表侧表示的这张卡在自己的灵摆区域放置。
-    ②：这张卡灵摆召唤成功的场合，以自己墓地1只灵摆怪兽为对象才能发动。那只怪兽在这张卡下面重叠作为超量素材。
+    等级４怪兽×２
+    在可灵摆召唤等级４的情况下，额外牌组表侧表示的此卡可以灵摆召唤。此卡名的①怪兽效果１回合仅可使用１次。①：去除此卡的１个超量素材可以发动。从手牌将１只等级７以下的灵摆怪兽的效果无效并以守备表示特殊召唤。然后，可将表侧表示的此卡放在自己的灵摆区域。②：此卡灵摆召唤成功的情况下，以自己墓地的１只灵摆怪兽为对象可以发动。将该怪兽重叠在此卡下方作为超量素材。
 card_type: Monster
 monster_type_line: Spellcaster / Xyz / Pendulum / Effect
 attribute: LIGHT
@@ -72,7 +67,8 @@ pendulum_effect:
   ko: |-
     ①: 1턴에 1번, 자신 또는 상대 몬스터의 공격 선언시에 발동할 수 있다. 그 공격을 무효로 한다. 그 후, 이 카드를 파괴한다.
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    ①：１回合１次，自己或对手的怪兽的攻击宣言时可以发动。将该攻击无效。然后破坏此卡。
 series:
 - Magician
 images:
@@ -115,6 +111,11 @@ sets:
     rarities:
     - Super Rare
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: SD29-SCP16
+    set_name: 'Structure Deck: Master of Pendulum Deck Enhancement Pack'
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
