--- a/rush.yaml
+++ b/rush.yaml
@@ -91324,8 +91324,21 @@ name:
   ko_rr:
   zh-TW:
   zh-CN:
-text:
-  en:
+requirement:
+  en: |-
+    During the turn you Normal Summoned this card, pay 1000 LP.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Add 1 Equip Spell Card from your Graveyard to your hand. Then, this card gains 400 ATK until the end of this turn.
   de:
   es:
   fr:
