--- a/data/cards/00387282.yaml
+++ b/data/cards/00387282.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 일반 소환에 성공했을 때에 발동할 수 있다. 덱에서 "가가가" 마법 / 함정 카드 1장을 패에 넣는다. ②: 이 카드 이외의 자신 필드의 "가가가" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터와 이 카드는, 턴 종료시까지 그 2장의 레벨을 합계한 레벨이 된다.
   zh-TW:
   zh-CN: |-
-    这张卡召唤成功时，可以从卡组把1张名字带有「我我我」的魔法·陷阱卡加入手卡。此外，选择这张卡以外的自己场上1只名字带有「我我我」的怪兽才能发动。选择的怪兽和这张卡直到结束阶段时变成各自等级合计的等级。「我我我妹妹」的这个效果1回合只能使用1次。
+    此卡名的②效果１回合仅可使用１次。①：此卡召唤成功时可以发动。从牌组将１张“我我我”魔法・陷阱卡加入手牌。②：以自己场上此卡以外的１只“我我我”怪兽为对象可以发动。该怪兽与此卡直至回合结束时为止，变为该２只等级合计的等级。
 card_type: Monster
 monster_type_line: Spellcaster / Effect
 attribute: DARK
