--- a/data/cards/03606728.yaml
+++ b/data/cards/03606728.yaml
@@ -38,7 +38,8 @@ text:
     ①: 자신 필드의 "가가가 매지션" 1장을 대상으로 하고 발동할 수 있다. 이 카드의 레벨은 그 몬스터와 같아진다. ②: 이 카드를 포함하는 "가가가" 몬스터만을 소재로서 엑시즈 소환한 몬스터는 이하의 효과를 얻는다. ●이 엑시즈 소환에 성공했을 때, 상대 필드의 특수 소환된 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터의 공격력을 0 으로 한다.
   zh-TW:
   zh-CN: |-
-    选择自己场上1只「我我我魔术师」才能发动。这张卡变成和选择的怪兽相同等级。此外，只用包含这张卡的名字带有「我我我」的怪兽为素材的XYZ怪兽得到以下效果。●这次XYZ召唤成功时，选择对方场上1只特殊召唤的怪兽才能发动。选择的怪兽的攻击力变成0。
+    ①：以自己场上的１只“我我我魔术师”为对象可以发动。此卡的等级变为与该怪兽相同。②：仅以包含此卡在内的“我我我”怪兽作为素材超量召唤的怪兽获得以下效果。
+    ●此超量召唤成功时，以对手场上１只被特殊召唤的怪兽为对象可以发动。将该怪兽的攻击力改成０。
 card_type: Monster
 monster_type_line: Spellcaster / Effect
 attribute: DARK
