--- a/data/cards/39432962.yaml
+++ b/data/cards/39432962.yaml
@@ -32,7 +32,7 @@ text:
     ①: 이 카드가 일반 소환 / 특수 소환에 성공했을 때에 발동할 수 있다. 패에서 "도도도 위치" 이외의 "도도도" 몬스터 1장을 앞면 공격 표시 또는 뒷면 수비 표시로 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    这张卡召唤·特殊召唤成功时，可以从手卡把「怒怒怒魔女」以外的1只名字带有「怒怒怒」的怪兽表侧攻击表示或者里侧守备表示特殊召唤。
+    ①：此卡召唤・特殊召唤成功时可以发动。从手牌将“怒怒怒魔女”以外的１只“怒怒怒”怪兽以表侧攻击表示或里侧守备表示特殊召唤。
 card_type: Monster
 monster_type_line: Warrior / Effect
 attribute: EARTH
