--- a/data/cards/90726340.yaml
+++ b/data/cards/90726340.yaml
@@ -12,7 +12,7 @@ name:
   ko: 용<ruby>마인<rt>魔人</rt></ruby> 퀸 드라군
   ko_rr:
   zh-TW:
-  zh-CN: 龙魔人 龙骑士女王
+  zh-CN: 龙魔人 女王龙
 text:
   en: |-
     2 Level 4 monsters
@@ -38,8 +38,8 @@ text:
     이 카드가 필드 위에 앞면 표시로 존재하는 한, "용마인(魔人) 퀸 드라군" 이외의 자신의 드래곤족 몬스터는 전투로는 파괴되지 않는다. 또한, 1턴에 1번, 이 카드의 엑시즈 소재를 1개 제거하는 것으로, 자신 묘지의 레벨 5 이상의 드래곤족 몬스터 1장을 선택하고 특수 소환한다. 이 효과로 특수 소환한 몬스터의 효과는 무효화되고, 이 턴에 그 몬스터는 공격할 수 없다.
   zh-TW:
   zh-CN: |-
-    4星怪兽×2
-    只要这张卡在场上表侧表示存在，「龙魔人 龙骑士女王」以外的自己的龙族怪兽不会被战斗破坏。此外，1回合1次，可以通过把这张卡1个XYZ素材取除，选择自己墓地1只5星以上的龙族怪兽特殊召唤。这个效果特殊召唤的怪兽的效果无效化，这个回合那只怪兽不能攻击。
+    等级４怪兽×２
+    ①：１回合１次，去除此卡的１个超量素材，以自己墓地的１只等级５以上龙族怪兽为对象可以发动。将该龙族怪兽特殊召唤。以此效果特殊召唤的怪兽的效果无效化，此回合不可攻击。②：只要此卡存在于怪兽区域，“龙魔人 女王龙”以外的自己的龙族怪兽不会因战斗被破坏。
 card_type: Monster
 monster_type_line: Dragon / Xyz / Effect
 attribute: DARK
@@ -87,6 +87,11 @@ sets:
     set_name: Galactic Overlord
     rarities:
     - Rare
+  zh-CN:
+  - set_number: SD29-SCP20
+    set_name: 'Structure Deck: Master of Pendulum Deck Enhancement Pack'
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
