--- a/data/cards/08512558.yaml
+++ b/data/cards/08512558.yaml
@@ -38,12 +38,11 @@ text:
     이 카드명은 룰상 "주바바", "가가가", "고고고", "도도도" 카드로도 취급한다. 이 카드명의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 메인 페이즈에 발동할 수 있다. 패에서 "희망황 오노마토피아" 이외의 이하의 몬스터를 각각 1장까지 수비 표시로 특수 소환한다. 이 효과의 발동 후, 턴 종료시까지 자신은 엑시즈 몬스터밖에 엑스트라 덱에서 특수 소환할 수 없다. ●"주바바" 몬스터 ●"가가가" 몬스터 ●"고고고" 몬스터 ●"도도도" 몬스터
   zh-TW:
   zh-CN: |-
-    这个卡名在规则上也当作「刷拉拉」、「我我我」、「隆隆隆」、「怒怒怒」卡使用。这个卡名的效果1回合只能使用1次。
-    ①：自己主要阶段才能发动。从手卡把「希望皇 拟声乌托邦」以外的以下怪兽各最多1只守备表示特殊召唤。这个效果的发动后，直到回合结束时自己不是超量怪兽不能从额外卡组特殊召唤。
-    ●「刷拉拉」怪兽
-    ●「我我我」怪兽
-    ●「隆隆隆」怪兽
-    ●「怒怒怒」怪兽
+    此卡名规则上也视为“刷拉拉”、“我我我”、“隆隆隆”、“怒怒怒”卡。此卡名的效果１回合仅可使用１次。①：在自己的主要阶段可以发动。从手牌将“希望皇拟声乌托邦”以外的以下怪兽各最多１只，以守备表示特殊召唤。此效果发动后，直至回合结束时为止自己从额外牌组仅可特殊召唤超量怪兽。
+    ●“刷拉拉”怪兽
+    ●“我我我”怪兽
+    ●“隆隆隆”怪兽
+    ●“怒怒怒”怪兽
 card_type: Monster
 monster_type_line: Warrior / Effect
 attribute: LIGHT
