--- a/data/cards/23720856.yaml
+++ b/data/cards/23720856.yaml
@@ -32,9 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 패에 존재하고, 자신 필드에 "주바바 반초－GC(가가가 코트)" 이외의, "주바바" 몬스터 또는 "가가가" 몬스터가 존재할 경우에 발동할 수 있다. 이 카드를 특수 소환한다. ②: 자신 묘지의, "고고고" 몬스터 또는 "도도도" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 특수 소환한다. 이 효과의 발동 후, 턴 종료시까지 자신은 엑시즈 몬스터밖에 엑스트라 덱에서 특수 소환할 수 없다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1回合各能使用1次。
-    ①：这张卡在手卡存在，自己场上有「刷拉拉番长-我我我外套」以外的此类「刷拉拉」怪兽或者此类「我我我」怪兽存在的场合才能发动。这张卡特殊召唤。
-    ②：以自己墓地1只「隆隆隆」怪兽或者「怒怒怒」怪兽为对象才能发动。那只怪兽特殊召唤。这个效果的发动后，直到回合结束时自己不是超量怪兽不能从额外卡组特殊召唤。
+    此卡名的①②效果１回合仅可各使用１次。①：此卡存在于手牌，自己场上有“刷拉拉番长－我我我外套”以外的、“刷拉拉”怪兽或“我我我”怪兽存在的情况下可以发动。将此卡特殊召唤。②：以自己墓地的１只“隆隆隆”怪兽或“怒怒怒”怪兽为对象可以发动。将该怪兽特殊召唤。此效果发动后，直至回合结束时为止自己从额外牌组仅可特殊召唤超量怪兽。
 card_type: Monster
 monster_type_line: Warrior / Effect
 attribute: EARTH
