--- a/data/cards/31123642.yaml
+++ b/data/cards/31123642.yaml
@@ -12,7 +12,7 @@ name:
   ko: <ruby>ZS<rt>제알 서버스</rt></ruby>－호프 세이지
   ko_rr: Zeal Seobeoseu - Hopeu Seiji
   zh-TW:
-  zh-CN: ZS-霍普贤者
+  zh-CN: ZEXAL从者－霍普贤者
 text:
   en: |-
     2 Level 4 monsters
@@ -40,8 +40,8 @@ text:
     이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 엑시즈 소재를 2개 제거하고 발동할 수 있다. 덱에서 "ZW(제알 웨폰)" 몬스터 또는 "ZS(제알 서버스)" 몬스터 1장을 특수 소환한다. 이 효과의 발동 후, 턴 종료시까지 자신은 엑시즈 몬스터밖에 엑스트라 덱에서 특수 소환할 수 없으며, "No." 몬스터로밖에 공격할 수 없다. ②: "ZS(제알 서버스)－호프 세이지"가 아닌 자신 필드의 원래의 속성이 빛 속성인 "유토피아" 또는 "호프" 엑시즈 몬스터가 전투 / 효과로 파괴될 경우, 대신에 필드 / 묘지의 이 카드를 제외할 수 있다.
   zh-TW:
   zh-CN: |-
-    等级4怪兽×2
-    这个卡名的①效果1回合只能使用1次。①：可以将这张卡的2个多维素材取除发动。从卡组特殊召唤1只「ZW」怪兽或者「ZS」怪兽。这个效果发动后，直到回合结束时自己从额外卡组特殊召唤的只能是多维怪兽，只能用「No.」怪兽攻击。②：除「ZS－希望賢者／ZS-霍普贤者」以外的自己场上的原属性为光属性的「ホープ／霍普」多维怪兽要被战斗或效果破坏的场合，可以将场上或墓地的这张卡除外作为代替。
+    等级４怪兽×２
+    此卡名的①效果１回合仅可使用１次。①：去除此卡的２个超量素材可以发动。从牌组将１只“ZEXAL兵器”怪兽或“ZEXAL从者”怪兽特殊召唤。此效果发动后，直至回合结束时为止，自己从额外牌组仅可特殊召唤超量怪兽，仅可用“编号”怪兽攻击。②：除“ZEXAL从者－霍普贤者”以外，自己场上原本属性为光属性的“霍普”超量怪兽将被战斗・效果破坏的情况下，可将场上・墓地的此卡除外作为代替。
 card_type: Monster
 monster_type_line: Warrior / Xyz / Effect
 attribute: LIGHT
@@ -93,6 +93,11 @@ sets:
     set_name: "Structure Deck: Overlay Universe Emperor's Door Pack"
     rarities:
     - Super Rare
+    - Secret Rare
+  zh-CN:
+  - set_number: SD42-SCP02
+    set_name: "Structure Deck: Overlay Universe Emperor's Door Pack"
+    rarities:
     - Secret Rare
 limit_regulation:
   tcg: Unlimited
