--- a/data/cards/44250812.yaml
+++ b/data/cards/44250812.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     我方场上存在除「我我我書記」以外的冠有「我我我」之名怪兽的场合，可从手牌特殊召唤此卡。
   zh-CN: |-
-    自己场上有「我我我书记」以外的名字带有「我我我」的怪兽存在的场合，这张卡可以从手卡特殊召唤。
+    ①：自己场上有“我我我书记”以外的“我我我”怪兽存在的情况下，此卡可从手牌中特殊召唤。
 card_type: Monster
 monster_type_line: Warrior / Effect
 attribute: EARTH
