--- a/data/cards/59724555.yaml
+++ b/data/cards/59724555.yaml
@@ -32,9 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 메인 페이즈에 발동할 수 있다. 패에서 "주바바" 몬스터 또는 "가가가" 몬스터 1장을 특수 소환한다. ②: 이 카드가 묘지에 존재하고, 자신 필드에 "도도도 드워프－GG(고고고 글로브)" 이외의, "고고고" 몬스터 또는 "도도도" 몬스터가 존재할 경우에 발동할 수 있다. 이 카드를 특수 소환한다. 이 효과로 특수 소환한 이 카드는, 필드에서 벗어났을 경우에 제외된다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1回合各能使用1次。
-    ①：自己主要阶段才能发动。从手卡把1只「刷拉拉」怪兽或者「我我我」怪兽特殊召唤。
-    ②：这张卡在墓地存在，自己场上有「怒怒怒矮人-隆隆隆手套」以外的此类「隆隆隆」怪兽或者此类「怒怒怒」怪兽存在的场合才能发动。这张卡特殊召唤。这个效果特殊召唤的这张卡从场上离开的场合除外。
+    此卡名的①②效果１回合仅可各使用１次。①：在自己的主要阶段可以发动。从手牌将１只“刷拉拉”怪兽或“我我我”怪兽特殊召唤。②：此卡存在于墓地，自己场上有“怒怒怒矮人－隆隆隆手套”以外的、“隆隆隆”怪兽或“怒怒怒”怪兽存在的情况下可以发动。将此卡特殊召唤。以此效果特殊召唤的此卡离开场上的情况下，将其除外。
 card_type: Monster
 monster_type_line: Rock / Effect
 attribute: EARTH
