--- a/data/cards/62476815.yaml
+++ b/data/cards/62476815.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     此卡于场上以表侧守备为限，此卡1回合1次不会被战斗破坏。
   zh-CN: |-
-    ①：守备表示的这张卡1回合只有1次不会被战斗破坏。
+    ①：守备表示的此卡１回合仅１次，不会因战斗被破坏。
 card_type: Monster
 monster_type_line: Rock / Effect
 attribute: EARTH
