--- a/data/cards/67517351.yaml
+++ b/data/cards/67517351.yaml
@@ -12,7 +12,7 @@ name:
   ko: <ruby>HRUM<rt>하이퍼 랭크 업 매직</rt></ruby>－토피아 포스
   ko_rr: Haipeo Raengkeu Eop Maejik - Topia Poseu
   zh-TW:
-  zh-CN: 超升阶魔法-乌托邦之力
+  zh-CN: 超升阶魔法－乌托邦之力
 text:
   en: |-
     Target 1 Rank 9 or lower "Utopia" Xyz Monster you control; Special Summon 1 Rank 10 or higher "Utopia" or "Utopic" Xyz Monster from your Extra Deck, by using that Xyz Monster you control as material. (This is treated as an Xyz Summon. Transfer its materials to the Summoned monster.) If an Xyz Monster(s) is Special Summoned by the effect of a Rank 10 or higher "Utopia" or "Utopic" Xyz Monster, while this card is in your GY (except during the Damage Step): You can target 1 of those Special Summoned monsters; attach this card to it as material. You can only use each effect of "Hyper Rank-Up-Magic Utopiforce" once per turn.
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드의 랭크 9 이하의 "유토피아" 엑시즈 몬스터 1장을 대상으로 하고 발동할 수 있다. 랭크 10 이상의 "유토피아" 또는 "호프" 엑시즈 몬스터 1장을, 대상의 자신 엑시즈 몬스터 위에 겹쳐 엑시즈 소환으로 취급하고 엑스트라 덱에서 특수 소환한다. ②: 이 카드가 묘지에 존재하고, 랭크 10 이상의 "유토피아" 또는 "호프" 엑시즈 몬스터의 효과로 엑시즈 몬스터가 특수 소환되었을 경우, 그 특수 소환된 몬스터 1장을 대상으로 하고 발동할 수 있다. 이 카드를 그 몬스터 아래에 겹쳐 엑시즈 소재로 한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②效果1回合各能使用1次。①：可以以自己场上的1只阶级9以下的「希望皇ホープ／希望皇 霍普」多维怪兽为对象发动。从额外卡组将1只阶级10以上的「ホープ／霍普」多维怪兽叠放在作为对象的自己的多维怪兽上面当作多维召唤地特殊召唤。②：这张卡在墓地存在，阶级10以上的「ホープ／霍普」多维怪兽的效果将多维怪兽特殊召唤的场合，可以以那样特殊召唤的1只怪兽为对象发动。将这张卡叠放在那只怪兽下面作为多维素材。
+    此卡名的①②效果１回合仅可各使用１次。①：以自己场上１只阶级９以下的“希望皇霍普”超量怪兽为对象可以发动。将１只阶级１０以上的“霍普”超量怪兽重叠在作为对象的自己的超量怪兽上面，视为超量召唤从额外牌组特殊召唤。②：此卡存在于墓地，超量怪兽因阶级１０以上的“霍普”超量怪兽的效果被特殊召唤的情况下，以该１只被特殊召唤的怪兽为对象可以发动。将此卡重叠在该怪兽下方作为超量素材。
 card_type: Spell
 property: Normal
 series:
@@ -77,6 +77,11 @@ sets:
     set_name: "Structure Deck: Overlay Universe Emperor's Door Pack"
     rarities:
     - Super Rare
+    - Secret Rare
+  zh-CN:
+  - set_number: SD42-SCP05
+    set_name: "Structure Deck: Overlay Universe Emperor's Door Pack"
+    rarities:
     - Secret Rare
 limit_regulation:
   tcg: Unlimited
