--- a/data/cards/96471335.yaml
+++ b/data/cards/96471335.yaml
@@ -12,7 +12,7 @@ name:
   ko: 환상의 흑마도사
   ko_rr:
   zh-TW:
-  zh-CN: 幻想之黑魔导师
+  zh-CN: 幻想黑之魔导师
 text:
   en: |-
     2 Level 7 monsters
@@ -40,8 +40,8 @@ text:
     이 카드는 자신 필드의 랭크 6 인 마법사족 엑시즈 몬스터의 위에 겹치고 엑시즈 소환할 수도 있다. "환상의 흑마도사"의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 1턴에 1번, 이 카드의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 패 / 덱에서 마법사족 일반 몬스터 1장을 특수 소환한다. ②: 마법사족 일반 몬스터의 공격 선언시, 상대 필드의 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 제외한다.
   zh-TW:
   zh-CN: |-
-    7星怪兽×2
-    这张卡也能在自己场上的6阶魔法师族XYZ怪兽上面重叠来XYZ召唤。「幻想之黑魔导师」的②的效果1回合只能使用1次。①：1回合1次，把这张卡1个XYZ素材取除才能发动。从手卡·卡组把1只魔法师族通常怪兽特殊召唤。②：魔法师族通常怪兽的攻击宣言时，以对方场上1张卡为对象才能发动。那张卡除外。
+    等级７怪兽×２
+    此卡也可重叠在自己场上阶级６魔法师族超量怪兽上面来超量召唤。此卡名的②效果１回合仅可使用１次。①：１回合１次，去除此卡的１个超量素材可以发动。从手牌・牌组将１只魔法师族通常怪兽特殊召唤。②：魔法师族通常怪兽的攻击宣言时，以对手场上的１张卡为对象可以发动。将该卡除外。
 card_type: Monster
 monster_type_line: Spellcaster / Xyz / Effect
 attribute: DARK
@@ -124,6 +124,11 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+  zh-CN:
+  - set_number: SD29-SCP18
+    set_name: 'Structure Deck: Master of Pendulum Deck Enhancement Pack'
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
