--- a/data/cards/96008713.yaml
+++ b/data/cards/96008713.yaml
@@ -3,7 +3,7 @@ password: 96008713
 name:
   en: Magical Arm Shield
   de: Magischer Armschild
-  es: Escudo Mágico de Brazo
+  es: Escudo Mágico de Brazo o Revestimiento mágico - brazo
   fr: Bouclier Magique de Bras
   it: Scudo da Braccio Magico
   pt: Escudo Mágico de Braço
