--- a/data/cards/54493213.yaml
+++ b/data/cards/54493213.yaml
@@ -54,6 +54,11 @@ sets:
     set_name: The Dark Emperor Structure Deck
     rarities:
     - Common
+  - set_number: SGX3-ENF01
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   de:
   - set_number: WC6-DE002
     set_name: 'Yu-Gi-Oh! Ultimate Masters: World Championship Tournament 2006 promotional cards'
@@ -63,6 +68,11 @@ sets:
     set_name: The Dark Emperor Structure Deck
     rarities:
     - Common
+  - set_number: SGX3-DEF01
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   fr:
   - set_number: WC6-FR002
     set_name: 'Yu-Gi-Oh! Ultimate Masters: World Championship Tournament 2006 promotional cards'
@@ -72,6 +82,11 @@ sets:
     set_name: The Dark Emperor Structure Deck
     rarities:
     - Common
+  - set_number: SGX3-FRF01
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   it:
   - set_number: WC6-IT002
     set_name: 'Yu-Gi-Oh! Ultimate Masters: World Championship Tournament 2006 promotional cards'
@@ -81,6 +96,17 @@ sets:
     set_name: The Dark Emperor Structure Deck
     rarities:
     - Common
+  - set_number: SGX3-ITF01
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
+  pt:
+  - set_number: SGX3-PTF01
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   ja:
   - set_number: E06-JP002
     set_name: 'Yu-Gi-Oh! Ultimate Masters: World Championship Tournament 2006 promotional cards'
@@ -103,4 +129,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 7794
