--- a/data/cards/94004268.yaml
+++ b/data/cards/94004268.yaml
@@ -70,6 +70,11 @@ sets:
     set_name: Speed Duel Tournament Pack 2
     rarities:
     - Ultra Rare
+  - set_number: SGX3-END02
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   - set_number: MFC-061
     set_name: Magician's Force
     rarities:
@@ -99,6 +104,11 @@ sets:
     set_name: Speed Duel Tournament Pack 2
     rarities:
     - Ultra Rare
+  - set_number: SGX3-DED02
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   fr:
   - set_number: DR1-FR116
     set_name: Dark Revelation Volume 1
@@ -124,6 +134,11 @@ sets:
     set_name: Speed Duel Tournament Pack 2
     rarities:
     - Ultra Rare
+  - set_number: SGX3-FRD02
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   it:
   - set_number: DR1-IT116
     set_name: Dark Revelation Volume 1
@@ -149,6 +164,11 @@ sets:
     set_name: Speed Duel Tournament Pack 2
     rarities:
     - Ultra Rare
+  - set_number: SGX3-ITD02
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   pt:
   - set_number: DR1-PT116
     set_name: Dark Revelation Volume 1
@@ -166,6 +186,11 @@ sets:
     set_name: Speed Duel Tournament Pack 2
     rarities:
     - Ultra Rare
+  - set_number: SGX3-PTD02
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   ja:
   - set_number: 303-007
     set_name: Champion of Black Magic
