--- a/data/cards/15951532.yaml
+++ b/data/cards/15951532.yaml
@@ -58,6 +58,11 @@ sets:
     set_name: OTS Tournament Pack 6
     rarities:
     - Common
+  - set_number: SGX3-END01
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   de:
   - set_number: DREV-DE032
     set_name: Duelist Revolution
@@ -67,6 +72,11 @@ sets:
     set_name: OTS Tournament Pack 6
     rarities:
     - Common
+  - set_number: SGX3-DED01
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   fr:
   - set_number: DREV-FR032
     set_name: Duelist Revolution
@@ -76,6 +86,11 @@ sets:
     set_name: OTS Tournament Pack 6
     rarities:
     - Common
+  - set_number: SGX3-FRD01
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   it:
   - set_number: DREV-IT032
     set_name: Duelist Revolution
@@ -85,11 +100,21 @@ sets:
     set_name: OTS Tournament Pack 6
     rarities:
     - Common
+  - set_number: SGX3-ITD01
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   pt:
   - set_number: OP06-PT025
     set_name: OTS Tournament Pack 6
     rarities:
     - Common
+  - set_number: SGX3-PTD01
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   ja:
   - set_number: DREV-JP032
     set_name: Duelist Revolution
@@ -116,4 +141,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 123340
