--- a/data/cards/22056710.yaml
+++ b/data/cards/22056710.yaml
@@ -58,6 +58,11 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Common
+  - set_number: SGX3-ENC01
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   de:
   - set_number: SD2-DE001
     set_name: 'Structure Deck: Zombie Madness'
@@ -67,6 +72,11 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Common
+  - set_number: SGX3-DEC01
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   fr:
   - set_number: SD2-FR001
     set_name: 'Structure Deck: Zombie Madness'
@@ -76,6 +86,11 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Common
+  - set_number: SGX3-FRC01
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   it:
   - set_number: SD2-IT001
     set_name: 'Structure Deck: Zombie Madness'
@@ -85,6 +100,11 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Common
+  - set_number: SGX3-ITC01
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   pt:
   - set_number: SD2-PT001
     set_name: 'Structure Deck: Zombie Madness'
@@ -94,6 +114,11 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Common
+  - set_number: SGX3-PTC01
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   ja:
   - set_number: SD2-JP001
     set_name: 'Structure Deck: Zombie Madness'
@@ -119,4 +144,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 1547
