--- a/data/cards/24508238.yaml
+++ b/data/cards/24508238.yaml
@@ -96,6 +96,11 @@ sets:
     set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Ultra Rare
+  - set_number: SGX3-ENF10
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   - set_number: DT05-EN003
     set_name: Duel Terminal 5a
     rarities:
@@ -150,6 +155,11 @@ sets:
     set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Ultra Rare
+  - set_number: SGX3-DEF10
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   fr:
   - set_number: STON-FR024
     set_name: Strike of Neos
@@ -196,6 +206,11 @@ sets:
     set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Ultra Rare
+  - set_number: SGX3-FRF10
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   it:
   - set_number: STON-IT024
     set_name: Strike of Neos
@@ -246,6 +261,11 @@ sets:
     set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Ultra Rare
+  - set_number: SGX3-ITF10
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   pt:
   - set_number: OP03-PT018
     set_name: OTS Tournament Pack 3
@@ -275,6 +295,11 @@ sets:
     set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Ultra Rare
+  - set_number: SGX3-PTF10
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   ja:
   - set_number: STON-JP024
     set_name: Strike of Neos
