--- a/data/cards/27408609.yaml
+++ b/data/cards/27408609.yaml
@@ -52,6 +52,11 @@ sets:
     set_name: The Dark Emperor Structure Deck
     rarities:
     - Common
+  - set_number: SGX3-ENF02
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   - set_number: DT06-EN066
     set_name: Duel Terminal 6b
     rarities:
@@ -65,6 +70,11 @@ sets:
     set_name: The Dark Emperor Structure Deck
     rarities:
     - Common
+  - set_number: SGX3-DEF02
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   fr:
   - set_number: WC6-FR001
     set_name: 'Yu-Gi-Oh! Ultimate Masters: World Championship Tournament 2006 promotional cards'
@@ -74,6 +84,11 @@ sets:
     set_name: The Dark Emperor Structure Deck
     rarities:
     - Common
+  - set_number: SGX3-FRF02
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   it:
   - set_number: WC6-IT001
     set_name: 'Yu-Gi-Oh! Ultimate Masters: World Championship Tournament 2006 promotional cards'
@@ -83,6 +98,17 @@ sets:
     set_name: The Dark Emperor Structure Deck
     rarities:
     - Common
+  - set_number: SGX3-ITF02
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
+  pt:
+  - set_number: SGX3-PTF02
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   ja:
   - set_number: E06-JP001
     set_name: 'Yu-Gi-Oh! Ultimate Masters: World Championship Tournament 2006 promotional cards'
