--- a/data/cards/42737833.yaml
+++ b/data/cards/42737833.yaml
@@ -19,7 +19,7 @@ text:
   de: |-
     Wenn diese Karte durch Kampf zerstört und auf den Friedhof gelegt wird, kannst du 1 "X-Säbel" Monster der Stufe 4 oder niedriger von deinem Deck als Spezialbeschwörung beschwören.
   es: |-
-    Cuando esta carta es destruida en batalla y mandada al Cementerio: puedes Invocar de Modo Especial, desde tu deck, 1 monstruo Sable-X de Nivel 4 o menor.
+    Cuando esta carta es destruida en batalla y mandada al Cementerio: puedes Invocar de Modo Especial, desde tu deck, 1 monstruo "Sable-X" de Nivel 4 o menor.
   fr: |-
     Lorsque cette carte est détruite au combat et envoyée au Cimetière : vous pouvez Invoquer Spécialement 1 monstre "Sabre X" de max. Niveau 4 depuis votre Deck.
   it: |-
