--- a/data/cards/48130397.yaml
+++ b/data/cards/48130397.yaml
@@ -82,6 +82,11 @@ sets:
     set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Starlight Rare
+  - set_number: SGX3-ENA17
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   de:
   - set_number: PTDN-DE046
     set_name: Phantom Darkness
@@ -123,6 +128,11 @@ sets:
     set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Starlight Rare
+  - set_number: SGX3-DEA17
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   fr:
   - set_number: PTDN-FR046
     set_name: Phantom Darkness
@@ -160,6 +170,11 @@ sets:
     set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Starlight Rare
+  - set_number: SGX3-FRA17
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   it:
   - set_number: PTDN-IT046
     set_name: Phantom Darkness
@@ -201,6 +216,11 @@ sets:
     set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Starlight Rare
+  - set_number: SGX3-ITA17
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   pt:
   - set_number: SDCR-PT021
     set_name: Cyber Dragon Revolution Structure Deck
@@ -230,6 +250,11 @@ sets:
     set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Starlight Rare
+  - set_number: SGX3-PTA17
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   ja:
   - set_number: PTDN-JP046
     set_name: Phantom Darkness
