--- a/data/cards/61370518.yaml
+++ b/data/cards/61370518.yaml
@@ -59,6 +59,11 @@ sets:
     rarities:
     - Rare
     - Starfoil Rare
+  - set_number: SGX3-ENE01
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   - set_number: DCR-073
     set_name: Dark Crisis
     rarities:
@@ -77,6 +82,11 @@ sets:
     rarities:
     - Rare
     - Starfoil Rare
+  - set_number: SGX3-DEE01
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   fr:
   - set_number: DR1-FR235
     set_name: Dark Revelation Volume 1
@@ -91,6 +101,11 @@ sets:
     rarities:
     - Rare
     - Starfoil Rare
+  - set_number: SGX3-FRE01
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   it:
   - set_number: DR1-IT235
     set_name: Dark Revelation Volume 1
@@ -105,11 +120,21 @@ sets:
     rarities:
     - Rare
     - Starfoil Rare
+  - set_number: SGX3-ITE01
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   pt:
   - set_number: DR1-PT235
     set_name: Dark Revelation Volume 1
     rarities:
     - Ultra Rare
+  - set_number: SGX3-PTE01
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   ja:
   - set_number: 305-020
     set_name: Threat of the Dark Demon World
@@ -132,4 +157,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 737
