--- a/data/cards/86676862.yaml
+++ b/data/cards/86676862.yaml
@@ -73,6 +73,11 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Common
+  - set_number: SGX3-ENA21
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   de:
   - set_number: DP06-DE013
     set_name: 'Duelist Pack: Jaden Yuki 3'
@@ -90,6 +95,11 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Common
+  - set_number: SGX3-DEA21
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   fr:
   - set_number: DP06-FR013
     set_name: 'Duelist Pack: Jaden Yuki 3'
@@ -120,6 +130,11 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Common
+  - set_number: SGX3-ITA21
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   pt:
   - set_number: LED5-PT020
     set_name: 'Legendary Duelists: Immortal Destiny'
@@ -129,6 +144,11 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Common
+  - set_number: SGX3-PTA21
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   ja:
   - set_number: DP06-JP017
     set_name: 'Duelist Pack: Jaden Yuki 3'
@@ -158,4 +178,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 538633
