--- a/data/cards/96561011.yaml
+++ b/data/cards/96561011.yaml
@@ -64,6 +64,11 @@ sets:
     set_name: 'Legendary Duelists: Season 1'
     rarities:
     - Common
+  - set_number: SGX3-ENB01
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   de:
   - set_number: SD1-DE001
     set_name: "Structure Deck: Dragon's Roar"
@@ -77,6 +82,11 @@ sets:
     set_name: 'Legendary Duelists: Season 1'
     rarities:
     - Common
+  - set_number: SGX3-DEB01
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   fr:
   - set_number: SD1-FR001
     set_name: "Structure Deck: Dragon's Roar"
@@ -90,6 +100,11 @@ sets:
     set_name: 'Legendary Duelists: Season 1'
     rarities:
     - Common
+  - set_number: SGX3-FRB01
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   it:
   - set_number: SD1-IT001
     set_name: "Structure Deck: Dragon's Roar"
@@ -103,6 +118,11 @@ sets:
     set_name: 'Legendary Duelists: Season 1'
     rarities:
     - Common
+  - set_number: SGX3-ITB01
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   pt:
   - set_number: SD1-PT001
     set_name: "Structure Deck: Dragon's Roar"
@@ -116,6 +136,11 @@ sets:
     set_name: 'Legendary Duelists: Season 1'
     rarities:
     - Common
+  - set_number: SGX3-PTB01
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   ja:
   - set_number: SD1-JP001
     set_name: "Structure Deck: Dragon's Roar"
