--- a/data/cards/70595331.yaml
+++ b/data/cards/70595331.yaml
@@ -68,6 +68,11 @@ sets:
     set_name: Secret Slayers
     rarities:
     - Super Rare
+  - set_number: SGX3-ENI17
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   de:
   - set_number: TAEV-DE088
     set_name: Tactical Evolution
@@ -85,6 +90,11 @@ sets:
     set_name: Secret Slayers
     rarities:
     - Super Rare
+  - set_number: SGX3-DEI17
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   fr:
   - set_number: TAEV-FR088
     set_name: Tactical Evolution
@@ -102,6 +112,11 @@ sets:
     set_name: Secret Slayers
     rarities:
     - Super Rare
+  - set_number: SGX3-FRI17
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   it:
   - set_number: TAEV-IT088
     set_name: Tactical Evolution
@@ -119,6 +134,11 @@ sets:
     set_name: Secret Slayers
     rarities:
     - Super Rare
+  - set_number: SGX3-ITI17
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   pt:
   - set_number: LCJW-PT203
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
@@ -128,6 +148,11 @@ sets:
     set_name: Secret Slayers
     rarities:
     - Super Rare
+  - set_number: SGX3-PTI17
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   ja:
   - set_number: EXP1-JP011
     set_name: Extra Pack
@@ -145,4 +170,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 539540
