--- a/data/cards/80485722.yaml
+++ b/data/cards/80485722.yaml
@@ -54,6 +54,11 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: SGX3-ENI19
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   de:
   - set_number: SHSP-DE034
     set_name: Shadow Specters
@@ -63,6 +68,11 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: SGX3-DEI19
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   fr:
   - set_number: SHSP-FR034
     set_name: Shadow Specters
@@ -72,6 +82,11 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: SGX3-FRI19
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   it:
   - set_number: SHSP-IT034
     set_name: Shadow Specters
@@ -81,6 +96,11 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: SGX3-ITI19
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   pt:
   - set_number: SHSP-PT034
     set_name: Shadow Specters
@@ -90,6 +110,11 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: SGX3-PTI19
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   ja:
   - set_number: SHSP-JP034
     set_name: Shadow Specters
@@ -103,4 +128,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 295132
