--- a/data/cards/95132338.yaml
+++ b/data/cards/95132338.yaml
@@ -43,6 +43,11 @@ sets:
     set_name: 'Structure Deck: Lord of the Storm'
     rarities:
     - Common
+  - set_number: SGX3-ENI34
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   - set_number: PCK-002
     set_name: 'Yu-Gi-Oh! Power of Chaos: Kaiba the Revenge promotional cards'
     rarities:
@@ -60,6 +65,11 @@ sets:
     set_name: 'Structure Deck: Lord of the Storm'
     rarities:
     - Common
+  - set_number: SGX3-DEI34
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   fr:
   - set_number: PCK-F002
     set_name: 'Yu-Gi-Oh! Power of Chaos: Kaiba the Revenge promotional cards'
@@ -69,6 +79,11 @@ sets:
     set_name: 'Structure Deck: Lord of the Storm'
     rarities:
     - Common
+  - set_number: SGX3-FRI34
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   it:
   - set_number: PCK-I002
     set_name: 'Yu-Gi-Oh! Power of Chaos: Kaiba the Revenge promotional cards'
@@ -78,6 +93,17 @@ sets:
     set_name: 'Structure Deck: Lord of the Storm'
     rarities:
     - Common
+  - set_number: SGX3-ITI34
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
+  pt:
+  - set_number: SGX3-PTI34
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   ja:
   - set_number: G4-05
     set_name: 'Yu-Gi-Oh! Duel Monsters 4: Battle of Great Duelist: Kaiba Deck promotional cards'
@@ -105,4 +131,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 3268
