--- a/data/cards/kdb18662.yaml
+++ b/data/cards/kdb18662.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18662
 password:
 name:
   en: Saincred Magician
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の効果は１ターンに１度しか使用できない。①：このカードがリバースした場合、自分の墓地の魔法カード１枚を対象として発動できる。そのカードを手札に加える。その後、デッキから「聖なる魔術師」または「神聖なる魔術師」１体を裏側守備表示で特殊召喚できる。
   ko:
   zh-TW:
   zh-CN:
@@ -42,6 +43,6 @@ sets:
     - Ultra Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 930451
 fake_password: 100200230
