--- a/data/cards/01475311.yaml
+++ b/data/cards/01475311.yaml
@@ -94,6 +94,11 @@ sets:
     set_name: Speed Duel Tournament Pack 3
     rarities:
     - Ultra Rare
+  - set_number: SGX3-ENI30
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   de:
   - set_number: PTDN-DE084
     set_name: Phantom Darkness
@@ -148,6 +153,11 @@ sets:
     set_name: Speed Duel Tournament Pack 3
     rarities:
     - Ultra Rare
+  - set_number: SGX3-DEI30
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   fr:
   - set_number: PTDN-FR084
     set_name: Phantom Darkness
@@ -202,6 +212,11 @@ sets:
     set_name: Speed Duel Tournament Pack 3
     rarities:
     - Ultra Rare
+  - set_number: SGX3-FRI30
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   it:
   - set_number: PTDN-IT084
     set_name: Phantom Darkness
@@ -256,6 +271,11 @@ sets:
     set_name: Speed Duel Tournament Pack 3
     rarities:
     - Ultra Rare
+  - set_number: SGX3-ITI30
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   pt:
   - set_number: OP01-PT025
     set_name: OTS Tournament Pack 1
@@ -293,6 +313,11 @@ sets:
     set_name: Speed Duel Tournament Pack 3
     rarities:
     - Ultra Rare
+  - set_number: SGX3-PTI30
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   ja:
   - set_number: EXP1-JP027
     set_name: Extra Pack
