--- a/data/cards/06614221.yaml
+++ b/data/cards/06614221.yaml
@@ -52,6 +52,11 @@ sets:
     set_name: OTS Tournament Pack 2
     rarities:
     - Ultimate Rare
+  - set_number: SGX3-ENH01
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   - set_number: BPW2-EN099
     set_name: 'War of the Giants: Round 2'
     rarities:
@@ -73,6 +78,11 @@ sets:
     set_name: OTS Tournament Pack 2
     rarities:
     - Ultimate Rare
+  - set_number: SGX3-DEH01
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   fr:
   - set_number: LODT-FR098
     set_name: Light of Destruction
@@ -86,6 +96,11 @@ sets:
     set_name: OTS Tournament Pack 2
     rarities:
     - Ultimate Rare
+  - set_number: SGX3-FRH01
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   it:
   - set_number: LODT-IT098
     set_name: Light of Destruction
@@ -99,6 +114,11 @@ sets:
     set_name: OTS Tournament Pack 2
     rarities:
     - Ultimate Rare
+  - set_number: SGX3-ITH01
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   pt:
   - set_number: WGRT-PT099
     set_name: War of the Giants Reinforcements
@@ -108,6 +128,11 @@ sets:
     set_name: OTS Tournament Pack 2
     rarities:
     - Ultimate Rare
+  - set_number: SGX3-PTH01
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   ja:
   - set_number: VB10-JP001
     set_name: The Valuable Book 10 promotional cards
@@ -121,4 +146,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 509363
