--- a/data/cards/25773409.yaml
+++ b/data/cards/25773409.yaml
@@ -56,6 +56,11 @@ sets:
     set_name: Duelist League 2010 participation cards
     rarities:
     - Rare
+  - set_number: SGX3-ENI15
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   - set_number: AST-017
     set_name: Ancient Sanctuary
     rarities:
@@ -93,6 +98,11 @@ sets:
     set_name: War of the Giants Reinforcements
     rarities:
     - Super Rare
+  - set_number: SGX3-DEI15
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   fr:
   - set_number: AST-FR017
     set_name: Ancient Sanctuary
@@ -114,6 +124,11 @@ sets:
     set_name: War of the Giants Reinforcements
     rarities:
     - Super Rare
+  - set_number: SGX3-FRI15
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   it:
   - set_number: AST-IT017
     set_name: Ancient Sanctuary
@@ -135,6 +150,11 @@ sets:
     set_name: War of the Giants Reinforcements
     rarities:
     - Super Rare
+  - set_number: SGX3-ITI15
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   pt:
   - set_number: AST-PT017
     set_name: Ancient Sanctuary
@@ -144,6 +164,11 @@ sets:
     set_name: War of the Giants Reinforcements
     rarities:
     - Super Rare
+  - set_number: SGX3-PTI15
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   ja:
   - set_number: 308-017
     set_name: The Sanctuary in the Sky (set)
@@ -173,4 +198,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 16733
