--- a/data/cards/59464593.yaml
+++ b/data/cards/59464593.yaml
@@ -59,6 +59,11 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: SGX3-ENI27
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   - set_number: DT05-EN058
     set_name: Duel Terminal 5b
     rarities:
@@ -76,6 +81,11 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: SGX3-DEI27
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   fr:
   - set_number: DP2-FR013
     set_name: 'Duelist Pack: Chazz Princeton'
@@ -89,6 +99,11 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: SGX3-FRI27
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   it:
   - set_number: DP2-IT013
     set_name: 'Duelist Pack: Chazz Princeton'
@@ -102,6 +117,11 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: SGX3-ITI27
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   pt:
   - set_number: OP15-PT001
     set_name: OTS Tournament Pack 15
@@ -111,6 +131,11 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: SGX3-PTI27
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   ja:
   - set_number: DP2-JP013
     set_name: 'Duelist Pack: Chazz Princeton'
@@ -149,4 +174,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 1746
