--- a/data/cards/70095154.yaml
+++ b/data/cards/70095154.yaml
@@ -160,6 +160,11 @@ sets:
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ghost Rare
+  - set_number: SGX3-ENI28
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   - set_number: MF03-EN009
     set_name: 'Mattel Action Figure promotional cards: Series 3'
     rarities:
@@ -301,6 +306,11 @@ sets:
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ghost Rare
+  - set_number: SGX3-DEI28
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   fr:
   - set_number: CRV-FR015
     set_name: Cybernetic Revolution
@@ -406,6 +416,11 @@ sets:
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ghost Rare
+  - set_number: SGX3-FRI28
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   it:
   - set_number: CRV-IT015
     set_name: Cybernetic Revolution
@@ -519,6 +534,11 @@ sets:
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ghost Rare
+  - set_number: SGX3-ITI28
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   pt:
   - set_number: CRV-PT015
     set_name: Cybernetic Revolution
@@ -591,6 +611,11 @@ sets:
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ghost Rare
+  - set_number: SGX3-PTI28
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   ja:
   - set_number: CRV-JP015
     set_name: Cybernetic Revolution
