--- a/data/cards/67853262.yaml
+++ b/data/cards/67853262.yaml
@@ -1,5 +1,5 @@
 konami_id: 18662
-password:
+password: 67853262
 name:
   en: Saincred Magician
   de:
@@ -34,7 +34,7 @@ atk: 600
 def: 800
 images:
 - index: 1
-  image: SaincredMagician-VJMP-JP-OP.png
+  image: SaincredMagician-VJMP-JP-UR.png
 sets:
   ja:
   - set_number: VJMP-JP230
