--- a/data/cards/08794435.yaml
+++ b/data/cards/08794435.yaml
@@ -8,7 +8,7 @@ name:
   it: Maju Garzett
   pt: Maju Garzett
   ja: <ruby>合<rt>ごう</rt></ruby><ruby>成<rt>せい</rt></ruby><ruby>魔<rt>ま</rt></ruby><ruby>獣<rt>じゅう</rt></ruby> ガーゼット
-  ja_romaji: Gōsei Majū Gāzetto
+  ja_romaji: Gōseimajū Gāzetto
   ko: 합성마수 가젯트
   ko_rr: Hapseongmasu Gajet-teu
   zh-TW:
