--- a/data/cards/yugipedia935199.yaml
+++ b/data/cards/yugipedia935199.yaml
@@ -36,13 +36,15 @@ series:
 - Synchron
 images:
 - index: 1
-  image: WheelSynchron-OW.png
+  image: WheelSynchron-DUNE-JP-OP.png
 sets:
   ja:
-  - set_number: ????-JP0??
+  - set_number: DUNE-JP001
     set_name: Duelist Nexus
     rarities:
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
 yugipedia_page_id: 935199
+fake_password:
+- 101201001
