--- a/rush.yaml
+++ b/rush.yaml
@@ -91845,8 +91845,8 @@ name:
   fr:
   it:
   pt:
-  ja: <ruby>移<rt>うつ</rt></ruby>り<ruby>気<rt>き</rt></ruby>の<ruby>女<rt>め</rt></ruby><ruby>神<rt>がみ</rt></ruby>
-  ja_romaji: Utsuriki no Megami
+  ja: <ruby>移<rt>うつ</rt></ruby>り<ruby>気<rt>ぎ</rt></ruby>の<ruby>女<rt>め</rt></ruby><ruby>神<rt>がみ</rt></ruby>
+  ja_romaji: Utsurigi no Megami
   ko:
   ko_rr:
   zh-TW:
@@ -92476,7 +92476,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Fusion Summon by sending monsters from your hand or field to the Graveyard as material.
+    Fusion Summon by sending monsters from your hand and/or field to the Graveyard as material.
   de:
   es:
   fr:
