--- a/src/assignments/assignments.yaml
+++ b/src/assignments/assignments.yaml
@@ -22,20 +22,19 @@
 - yugipedia: 371832
   fake_password: 10000090
 ## Prereleases
-# Deck Build Pack: Wild Survivors
-- set_abbreviation: DBWS
-  fake_password_range:
-    - 100430000
 # Duelist Nexus
 - set_abbreviation: DUNE
   fake_password_range:
     - 101201000
-# Saincred Magician
-- yugipedia: 930451
-  fake_password: 100200230
-# Elemental HERO Flame Wingman - Infernal Rage
-- yugipedia: 935661
-  fake_password: 100418001
-# Link Decoder
-- yugipedia: 935662
-  fake_password: 100418002
+# Duelist Pack: Duelists of Explosion
+- set_abbreviation: DP28
+  fake_password_range:
+    - 100299000
+# Animation Chronicle 2023
+- set_abbreviation: AC03
+  fake_password_range:
+    - 101201000
+# Mystic Potato
+- yugipedia: 806659
+  fake_password: 100200235
+  
