--- a/data/cards/15001940.yaml
+++ b/data/cards/15001940.yaml
@@ -1,7 +1,7 @@
 konami_id: 18742
 password: 15001940
 name:
-  en: Foie Glasya de Nouvellez
+  en: Foie Glasya de Nouvelles
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    You can Ritual Summon this card with any "Recipe" card. You can only use each of the following effects of "Foie Glasya de Nouvellez" once per turn. If this card is Special Summoned: You can target up to 3 cards in any GY(s); shuffle them into the Deck. When a card or effect is activated that targets a monster(s) on the field, or when a monster is targeted for an attack (Quick Effect): You can Tribute both 1 "Nouvellez" monster you control and 1 Attack Position monster on either field, and if you do, Special Summon 1 Level 5 or 6 "Nouvellez" Ritual Monster from your hand or Deck.
+    You can Ritual Summon this card with any "Recipe" card. You can only use each of the following effects of "Foie Glasya de Nouvelles" once per turn. If this card is Special Summoned: You can target up to 3 cards in any GY(s); shuffle them into the Deck. When a card or effect is activated that targets a monster(s) on the field, or when a monster is targeted for an attack (Quick Effect): You can Tribute both 1 "Nouvelles" monster you control and 1 Attack Position monster on either field, and if you do, Special Summon 1 Level 5 or 6 "Nouvelles" Ritual Monster from your hand or Deck.
   de:
   es:
   fr:
@@ -33,10 +33,10 @@ level: 4
 atk: 1600
 def: 1850
 series:
-- Nouvellez
+- Nouvelles
 images:
 - index: 1
-  image: FoieGlasyadeNouvellez-DBWS-JP-C.png
+  image: FoieGlasyadeNouvelles-DBWS-JP-C.png
 sets:
   ja:
   - set_number: DBWS-JP032
