--- a/data/cards/41773061.yaml
+++ b/data/cards/41773061.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Reveal 2 "Nouvellez" monsters with different names from your Deck, your opponent chooses 1 of them for you to add to your hand, and you shuffle the other into your Deck, then you can add 1 of the following cards from your Deck or GY to your hand, based on the added monster's Type.
+    Reveal 2 "Nouvelles" monsters with different names from your Deck, your opponent chooses 1 of them for you to add to your hand, and you shuffle the other into your Deck, then you can add 1 of the following cards from your Deck or GY to your hand, based on the added monster's Type.
     ● Beast-Warrior: "Recette de Poisson - Fish Recipe"
     ● Warrior: "Recette de Viande - Meat Recipe"
     You can only activate 1 "Voici la Carte - Here is the Menu" per turn.
