--- a/data/cards/52495649.yaml
+++ b/data/cards/52495649.yaml
@@ -1,7 +1,7 @@
 konami_id: 18743
 password: 52495649
 name:
-  en: Balameuniere de Nouvellez
+  en: Balameuniere de Nouvelles
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    You can Ritual Summon this card with any "Recipe" card. You can only use each of the following effects of "Balameuniere de Nouvellez" once per turn. If this card is Special Summoned: You can add 1 "Nouvellez" or "Recipe" card from your Deck to your hand. You can target 1 opponent’s Attack Position monster; Tribute it, and if you do, Special Summon 1 Level 6 "Nouvellez" Ritual Monster from your hand or Deck. This is a Quick Effect if this card was Special Summoned by a "Nouvellez" monster's effect.
+    You can Ritual Summon this card with any "Recipe" card. You can only use each of the following effects of "Balameuniere de Nouvelles" once per turn. If this card is Special Summoned: You can add 1 "Nouvelles" or "Recipe" card from your Deck to your hand. You can target 1 opponent’s Attack Position monster; Tribute it, and if you do, Special Summon 1 Level 6 "Nouvelles" Ritual Monster from your hand or Deck. This is a Quick Effect if this card was Special Summoned by a "Nouvelles" monster's effect.
   de:
   es:
   fr:
@@ -33,10 +33,10 @@ level: 5
 atk: 2000
 def: 1850
 series:
-- Nouvellez
+- Nouvelles
 images:
 - index: 1
-  image: BalameunieredeNouvellez-DBWS-JP-SR.png
+  image: BalameunieredeNouvelles-DBWS-JP-SR.png
 sets:
   ja:
   - set_number: DBWS-JP033
