--- a/data/cards/88890658.yaml
+++ b/data/cards/88890658.yaml
@@ -1,7 +1,7 @@
 konami_id: 18744
 password: 88890658
 name:
-  en: Baegriller de Nouvellez
+  en: Baelgrill de Nouvelles
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    You can Ritual Summon this card with any "Recipe" card. You can only use each of the following effects of "Baegriller Nouvellez" once per turn. If this card is Special Summoned: You can negate the effects of as many face-up cards your opponent currently controls as possible (until the end of this turn), then, if this card was Special Summoned by a "Nouvellez" monster's effect, Tribute as many monsters your opponent controls as possible. (Quick Effect): You can target 1 opponent's Attack Position monster; Tribute it, and if you do, Special Summon 1 "Hungry Burger" from your hand or Deck.
+    You can Ritual Summon this card with any "Recipe" card. You can only use each of the following effects of "Baegriller Nouvelles" once per turn. If this card is Special Summoned: You can negate the effects of as many face-up cards your opponent currently controls as possible (until the end of this turn), then, if this card was Special Summoned by a "Nouvelles" monster's effect, Tribute as many monsters your opponent controls as possible. (Quick Effect): You can target 1 opponent's Attack Position monster; Tribute it, and if you do, Special Summon 1 "Hungry Burger" from your hand or Deck.
   de:
   es:
   fr:
@@ -33,10 +33,10 @@ level: 6
 atk: 2400
 def: 1850
 series:
-- Nouvellez
+- Nouvelles
 images:
 - index: 1
-  image: BaegrillerdeNouvellez-DBWS-JP-UR.png
+  image: BaelgrilldeNouvelles-DBWS-JP-UR.png
 sets:
   ja:
   - set_number: DBWS-JP034
