--- a/data/cards/14166715.yaml
+++ b/data/cards/14166715.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    This card can be used to Ritual Summon any "Nouvellez" Ritual Monster. You must also Tribute monsters from your hand or field whose total Levels equal or exceed the Level of the Ritual Monster you Ritual Summon. Then, if you Ritual Summoned "Confitras de Nouvellez" with this effect, you can apply the following effect.
+    This card can be used to Ritual Summon any "Nouvelles" Ritual Monster. You must also Tribute monsters from your hand or field whose total Levels equal or exceed the Level of the Ritual Monster you Ritual Summon. Then, if you Ritual Summoned "Confitras de Nouvelles" with this effect, you can apply the following effect.
     ● Change all opponent's Defense Position monsters to face-up Attack Position.
   de:
   es:
