--- a/data/cards/53618197.yaml
+++ b/data/cards/53618197.yaml
@@ -1,7 +1,7 @@
 konami_id: 18740
 password: 53618197
 name:
-  en: Confitras de Nouvellez
+  en: Confitras de Nouvelles
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    You can Ritual Summon this card with any "Recipe" card. You can only use each of the following effects of "Confitras de Nouvellez" once per turn. If this card is Special Summoned: You can target 1 Spell/Trap on the field; destroy it. When a card or effect is activated that targets this card, or when this card is targeted for an attack (Quick Effect): You can Tribute both this card and 1 other Attack Position monster on either field, and if you do, Special Summon 1 Level 3 or 4 "Nouvellez" Ritual Monster from your hand or Deck.
+    You can Ritual Summon this card with any "Recipe" card. You can only use each of the following effects of "Confitras de Nouvelles" once per turn. If this card is Special Summoned: You can target 1 Spell/Trap on the field; destroy it. When a card or effect is activated that targets this card, or when this card is targeted for an attack (Quick Effect): You can Tribute both this card and 1 other Attack Position monster on either field, and if you do, Special Summon 1 Level 3 or 4 "Nouvelles" Ritual Monster from your hand or Deck.
   de:
   es:
   fr:
@@ -33,10 +33,10 @@ level: 2
 atk: 800
 def: 1850
 series:
-- Nouvellez
+- Nouvelles
 images:
 - index: 1
-  image: ConfitrasdeNouvellez-DBWS-JP-C.png
+  image: ConfitrasdeNouvelles-DBWS-JP-C.png
 sets:
   ja:
   - set_number: DBWS-JP030
