--- a/data/cards/09709452.yaml
+++ b/data/cards/09709452.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>烈<rt>れつ</rt></ruby><ruby>日<rt>じつ</rt></ruby>の<ruby>騎<rt>き</rt></ruby><ruby>士<rt>し</rt></ruby>ガイアブレイズ
-  ja_romaji: Retsujitsu no Kishi Gaiabureizu
+  ja_romaji: Retsujitsu no Kishi Gaia Bureizu
   ko:
   ko_rr:
   zh-TW:
