--- a/data/cards/98696958.yaml
+++ b/data/cards/98696958.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>暗<rt>あん</rt></ruby><ruby>黒<rt>こく</rt></ruby><ruby>回<rt>かい</rt></ruby><ruby>廊<rt>ろう</rt></ruby>
-  ja_romaji: Ankoku Kairō
+  ja_romaji: Ankokukairō
   ko:
   ko_rr:
   zh-TW:
