--- a/rush.yaml
+++ b/rush.yaml
@@ -95961,7 +95961,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター(ギャラクシー族)5体をデッキに戻して発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -95973,7 +95974,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキの上から3枚を墓地へ送る。このターン、このカードは相手の罠カードの効果では破壊されない。さらにこのカードの攻撃力をターン終了時まで、自分の墓地のモンスターの数、×300アップできる。
   ko:
   zh-TW:
   zh-CN:
@@ -95985,13 +95987,14 @@ atk: 3500
 def: 2500
 materials:
   en: |-
-    "Galactica Oblivion" + 2 LIGHT Galaxy Type monsters
+    "Galactica Oblivion" + 2 LIGHT Attribute Galaxy Type monsters
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「ギャラクティカ・オブリビオン」+モンスター(光属性/ギャラクシー族)×2
   ko:
   zh-TW:
   zh-CN:
