--- a/data/cards/38356857.yaml
+++ b/data/cards/38356857.yaml
@@ -51,22 +51,27 @@ sets:
   - set_number: PHHY-EN018
     set_name: Photon Hypernova
     rarities:
+    - Common
   de:
   - set_number: PHHY-DE018
     set_name: Photon Hypernova
     rarities:
+    - Common
   fr:
   - set_number: PHHY-FR018
     set_name: Photon Hypernova
     rarities:
+    - Common
   it:
   - set_number: PHHY-IT018
     set_name: Photon Hypernova
     rarities:
+    - Common
   pt:
   - set_number: PHHY-PT018
     set_name: Photon Hypernova
     rarities:
+    - Common
   ja:
   - set_number: PHHY-JP018
     set_name: Photon Hypernova
