--- a/data/cards/18963306.yaml
+++ b/data/cards/18963306.yaml
@@ -145,6 +145,11 @@ sets:
     set_name: Selection 10
     rarities:
     - Common
+  zh-CN:
+  - set_number: CL04-SC090
+    set_name: Classic Pack 04
+    rarities:
+    - Prismatic Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
