--- a/data/cards/28346136.yaml
+++ b/data/cards/28346136.yaml
@@ -97,6 +97,11 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  zh-CN:
+  - set_number: CL04-SC093
+    set_name: Classic Pack 04
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
