--- a/data/cards/76593718.yaml
+++ b/data/cards/76593718.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>強<rt>ごう</rt></ruby><ruby>欲<rt>よく</rt></ruby>なポッド
-  ja_romaji: Gōyoku-na Poddo
+  ja_romaji: Gōyoku na Poddo
   ko:
   ko_rr:
   zh-TW:
