--- a/data/cards/90555947.yaml
+++ b/data/cards/90555947.yaml
@@ -90,6 +90,11 @@ sets:
     set_name: Extra Pack 2015
     rarities:
     - Rare
+  zh-CN:
+  - set_number: CL04-SC125
+    set_name: Classic Pack 04
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
