--- a/data/rush/yugipedia932337.yaml
+++ b/data/rush/yugipedia932337.yaml
@@ -1,6 +1,6 @@
 konami_id:
 name:
-  en: Grace Spear the Magical Spear
+  en: Magical Lance - Grace Spear
   de:
   es:
   fr:
@@ -40,7 +40,7 @@ card_type: Spell
 property: Equip
 images:
 - index: 1
-  image: GraceSpeartheMagicalSpear-RDKP13-JP-OP.png
+  image: MagicalLanceGraceSpear-RDKP13-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP13-JP055
